#9 Added some missing summaries

--- a/docs/api-reference/CRMScript.NetServer.NSRedLetterDetails.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSRedLetterDetails.yml
@@ -15,7 +15,7 @@ items:
   nameWithType: NSRedLetterDetails
   fullName: CRMScript.NetServer.NSRedLetterDetails
   type: Class
-  summary: 
+  summary: "\nRed-letter day text details, all the texts related to the given day.\n"
   example: 
 - uid: CRMScript.NetServer.NSRedLetterDetails.#ctor
   commentId: M:CRMScript.NetServer.NSRedLetterDetails.#ctor
@@ -27,7 +27,7 @@ items:
   nameWithType: NSRedLetterDetails.#ctor
   fullName: CRMScript.NetServer.NSRedLetterDetails.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSRedLetterDetails class.\n"
   remarks: 
   syntax: 
     content: NSRedLetterDetails
