--- a/docs/api-reference/CRMScript.NetServer.NSRedLetterInformationListItem.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSRedLetterInformationListItem.yml
@@ -17,7 +17,7 @@ items:
   nameWithType: NSRedLetterInformationListItem
   fullName: CRMScript.NetServer.NSRedLetterInformationListItem
   type: Class
-  summary: 
+  summary: "\nDetailed information on red-letter days, including both holidays and other days with their individual texts.\n"
   example: 
 - uid: CRMScript.NetServer.NSRedLetterInformationListItem.#ctor
   commentId: M:CRMScript.NetServer.NSRedLetterInformationListItem.#ctor
@@ -29,7 +29,7 @@ items:
   nameWithType: NSRedLetterInformationListItem.#ctor
   fullName: CRMScript.NetServer.NSRedLetterInformationListItem.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSRedLetterInformationListItem class.\n"
   remarks: 
   syntax: 
     content: NSRedLetterInformationListItem
