--- a/docs/api-reference/CRMScript.NetServer.NSRedLetterSummary.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSRedLetterSummary.yml
@@ -15,7 +15,7 @@ items:
   nameWithType: NSRedLetterSummary
   fullName: CRMScript.NetServer.NSRedLetterSummary
   type: Class
-  summary: 
+  summary: "\nSummary of red-letter day information - holiday in own country, and in other countries known to the system.\n"
   example: 
 - uid: CRMScript.NetServer.NSRedLetterSummary.#ctor
   commentId: M:CRMScript.NetServer.NSRedLetterSummary.#ctor
@@ -27,7 +27,7 @@ items:
   nameWithType: NSRedLetterSummary.#ctor
   fullName: CRMScript.NetServer.NSRedLetterSummary.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSRedLetterSummary class.\n"
   remarks: 
   syntax: 
     content: NSRedLetterSummary
