--- a/docs/api-reference/CRMScript.NetServer.NSRefCountEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSRefCountEntity.yml
@@ -33,7 +33,7 @@ items:
   nameWithType: NSRefCountEntity
   fullName: CRMScript.NetServer.NSRefCountEntity
   type: Class
-  summary: 
+  summary: "\nA refcount entity for a number allocation.\n"
   example: 
 - uid: CRMScript.NetServer.NSRefCountEntity.#ctor
   commentId: M:CRMScript.NetServer.NSRefCountEntity.#ctor
@@ -45,7 +45,7 @@ items:
   nameWithType: NSRefCountEntity.#ctor
   fullName: CRMScript.NetServer.NSRefCountEntity.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSRefCountEntity class.\n"
   remarks: 
   syntax: 
     content: NSRefCountEntity
