--- a/docs/api-reference/CRMScript.NetServer.NSRelationDefinitionEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSRelationDefinitionEntity.yml
@@ -27,7 +27,7 @@ items:
   nameWithType: NSRelationDefinitionEntity
   fullName: CRMScript.NetServer.NSRelationDefinitionEntity
   type: Class
-  summary: 
+  summary: "\nA relation definition entity with source and destination tables.\n"
   example: 
 - uid: CRMScript.NetServer.NSRelationDefinitionEntity.#ctor
   commentId: M:CRMScript.NetServer.NSRelationDefinitionEntity.#ctor
@@ -39,7 +39,7 @@ items:
   nameWithType: NSRelationDefinitionEntity.#ctor
   fullName: CRMScript.NetServer.NSRelationDefinitionEntity.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSRelationDefinitionEntity class.\n"
   remarks: 
   syntax: 
     content: NSRelationDefinitionEntity
