--- a/docs/api-reference/CRMScript.NetServer.NSRelationToOwner.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSRelationToOwner.yml
@@ -17,7 +17,7 @@ items:
   nameWithType: NSRelationToOwner
   fullName: CRMScript.NetServer.NSRelationToOwner
   type: Class
-  summary: 
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSRelationToOwner.#ctor
   commentId: M:CRMScript.NetServer.NSRelationToOwner.#ctor
@@ -29,7 +29,7 @@ items:
   nameWithType: NSRelationToOwner.#ctor
   fullName: CRMScript.NetServer.NSRelationToOwner.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSRelationToOwner class.\n"
   remarks: 
   syntax: 
     content: NSRelationToOwner
