--- a/docs/api-reference/CRMScript.NetServer.NSReplicationAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSReplicationAgent.yml
@@ -111,7 +111,7 @@ items:
   nameWithType: NSReplicationAgent.GetCentralLicense()
   fullName: CRMScript.NetServer.NSReplicationAgent.GetCentralLicense()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: NSLicenseOwner[] GetCentralLicense()
@@ -151,7 +151,7 @@ items:
   nameWithType: NSReplicationAgent.SaveCentralLicense(NSLicenseOwner[])
   fullName: CRMScript.NetServer.NSReplicationAgent.SaveCentralLicense(NSLicenseOwner[])
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: NSLicenseOwner[] SaveCentralLicense(NSLicenseOwner[] license)
