--- a/docs/api-reference/CRMScript.NetServer.NSReplyTemplate.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSReplyTemplate.yml
@@ -19,7 +19,7 @@ items:
   nameWithType: NSReplyTemplate
   fullName: CRMScript.NetServer.NSReplyTemplate
   type: Class
-  summary: 
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSReplyTemplate.#ctor
   commentId: M:CRMScript.NetServer.NSReplyTemplate.#ctor
@@ -31,7 +31,7 @@ items:
   nameWithType: NSReplyTemplate.#ctor
   fullName: CRMScript.NetServer.NSReplyTemplate.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSReplyTemplate class.\n"
   remarks: 
   syntax: 
     content: NSReplyTemplate
