--- a/docs/api-reference/CRMScript.NetServer.NSReportEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSReportEntity.yml
@@ -27,7 +27,7 @@ items:
   nameWithType: NSReportEntity
   fullName: CRMScript.NetServer.NSReportEntity
   type: Class
-  summary: 
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSReportEntity.#ctor
   commentId: M:CRMScript.NetServer.NSReportEntity.#ctor
@@ -39,7 +39,7 @@ items:
   nameWithType: NSReportEntity.#ctor
   fullName: CRMScript.NetServer.NSReportEntity.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSReportEntity class.\n"
   remarks: 
   syntax: 
     content: NSReportEntity
