--- a/docs/api-reference/CRMScript.NetServer.NSReportLabelLayoutEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSReportLabelLayoutEntity.yml
@@ -35,7 +35,7 @@ items:
   nameWithType: NSReportLabelLayoutEntity
   fullName: CRMScript.NetServer.NSReportLabelLayoutEntity
   type: Class
-  summary: 
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSReportLabelLayoutEntity.#ctor
   commentId: M:CRMScript.NetServer.NSReportLabelLayoutEntity.#ctor
@@ -47,7 +47,7 @@ items:
   nameWithType: NSReportLabelLayoutEntity.#ctor
   fullName: CRMScript.NetServer.NSReportLabelLayoutEntity.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSReportLabelLayoutEntity class.\n"
   remarks: 
   syntax: 
     content: NSReportLabelLayoutEntity
