--- a/docs/api-reference/CRMScript.NetServer.NSResolvedPerson.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSResolvedPerson.yml
@@ -15,7 +15,7 @@ items:
   nameWithType: NSResolvedPerson
   fullName: CRMScript.NetServer.NSResolvedPerson
   type: Class
-  summary: 
+  summary: "\nThe Person Service. The service implements all services working with the Person object.\n"
   example: 
 - uid: CRMScript.NetServer.NSResolvedPerson.#ctor
   commentId: M:CRMScript.NetServer.NSResolvedPerson.#ctor
@@ -27,7 +27,7 @@ items:
   nameWithType: NSResolvedPerson.#ctor
   fullName: CRMScript.NetServer.NSResolvedPerson.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSResolvedPerson class.\n"
   remarks: 
   syntax: 
     content: NSResolvedPerson
