--- a/docs/api-reference/CRMScript.NetServer.NSResolvedUser.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSResolvedUser.yml
@@ -15,7 +15,7 @@ items:
   nameWithType: NSResolvedUser
   fullName: CRMScript.NetServer.NSResolvedUser
   type: Class
-  summary: 
+  summary: "\nThe User Service. The service implements all services working with the User object.\n"
   example: 
 - uid: CRMScript.NetServer.NSResolvedUser.#ctor
   commentId: M:CRMScript.NetServer.NSResolvedUser.#ctor
@@ -27,7 +27,7 @@ items:
   nameWithType: NSResolvedUser.#ctor
   fullName: CRMScript.NetServer.NSResolvedUser.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSResolvedUser class.\n"
   remarks: 
   syntax: 
     content: NSResolvedUser
