--- a/docs/api-reference/CRMScript.NetServer.NSResourceEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSResourceEntity.yml
@@ -25,7 +25,7 @@ items:
   nameWithType: NSResourceEntity
   fullName: CRMScript.NetServer.NSResourceEntity
   type: Class
-  summary: 
+  summary: "\nThe resource entity contains resource information.\n"
   example: 
 - uid: CRMScript.NetServer.NSResourceEntity.#ctor
   commentId: M:CRMScript.NetServer.NSResourceEntity.#ctor
@@ -37,7 +37,7 @@ items:
   nameWithType: NSResourceEntity.#ctor
   fullName: CRMScript.NetServer.NSResourceEntity.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSResourceEntity class.\n"
   remarks: 
   syntax: 
     content: NSResourceEntity
