--- a/docs/api-reference/CRMScript.NetServer.NSResourceOverride.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSResourceOverride.yml
@@ -19,7 +19,7 @@ items:
   nameWithType: NSResourceOverride
   fullName: CRMScript.NetServer.NSResourceOverride
   type: Class
-  summary: 
+  summary: "\nThe resource entity contains resource information.\n"
   example: 
 - uid: CRMScript.NetServer.NSResourceOverride.#ctor
   commentId: M:CRMScript.NetServer.NSResourceOverride.#ctor
@@ -31,7 +31,7 @@ items:
   nameWithType: NSResourceOverride.#ctor
   fullName: CRMScript.NetServer.NSResourceOverride.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSResourceOverride class.\n"
   remarks: 
   syntax: 
     content: NSResourceOverride
