--- a/docs/api-reference/CRMScript.NetServer.NSReturnInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSReturnInfo.yml
@@ -23,7 +23,7 @@ items:
   nameWithType: NSReturnInfo
   fullName: CRMScript.NetServer.NSReturnInfo
   type: Class
-  summary: 
+  summary: "\nReturn value object for Document Plugin API calls.\n"
   example: 
 - uid: CRMScript.NetServer.NSReturnInfo.#ctor
   commentId: M:CRMScript.NetServer.NSReturnInfo.#ctor
@@ -35,7 +35,7 @@ items:
   nameWithType: NSReturnInfo.#ctor
   fullName: CRMScript.NetServer.NSReturnInfo.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSReturnInfo class.\n"
   remarks: 
   syntax: 
     content: NSReturnInfo
