--- a/docs/api-reference/CRMScript.NetServer.NSRole.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSRole.yml
@@ -17,7 +17,7 @@ items:
   nameWithType: NSRole
   fullName: CRMScript.NetServer.NSRole
   type: Class
-  summary: 
+  summary: "\nUsers role for role-based security.\n"
   example: 
 - uid: CRMScript.NetServer.NSRole.#ctor
   commentId: M:CRMScript.NetServer.NSRole.#ctor
@@ -29,7 +29,7 @@ items:
   nameWithType: NSRole.#ctor
   fullName: CRMScript.NetServer.NSRole.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSRole class.\n"
   remarks: 
   syntax: 
     content: NSRole
