--- a/docs/api-reference/CRMScript.NetServer.NSRoleEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSRoleEntity.yml
@@ -35,7 +35,7 @@ items:
   nameWithType: NSRoleEntity
   fullName: CRMScript.NetServer.NSRoleEntity
   type: Class
-  summary: 
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSRoleEntity.#ctor
   commentId: M:CRMScript.NetServer.NSRoleEntity.#ctor
@@ -47,7 +47,7 @@ items:
   nameWithType: NSRoleEntity.#ctor
   fullName: CRMScript.NetServer.NSRoleEntity.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSRoleEntity class.\n"
   remarks: 
   syntax: 
     content: NSRoleEntity
