--- a/docs/api-reference/CRMScript.NetServer.NSSaintConfiguration.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSaintConfiguration.yml
@@ -27,7 +27,7 @@ items:
   nameWithType: NSSaintConfiguration
   fullName: CRMScript.NetServer.NSSaintConfiguration
   type: Class
-  summary: 
+  summary: "\nDefinition of the three periods for status monitors and some other settings per saint entity.\n"
   example: 
 - uid: CRMScript.NetServer.NSSaintConfiguration.#ctor
   commentId: M:CRMScript.NetServer.NSSaintConfiguration.#ctor
@@ -39,7 +39,7 @@ items:
   nameWithType: NSSaintConfiguration.#ctor
   fullName: CRMScript.NetServer.NSSaintConfiguration.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSSaintConfiguration class.\n"
   remarks: 
   syntax: 
     content: NSSaintConfiguration
