--- a/docs/api-reference/CRMScript.NetServer.NSSaleAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSaleAgent.yml
@@ -79,7 +79,7 @@ items:
   nameWithType: NSSaleAgent.AddSaleStakeholders(Integer,NSSaleStakeholder[])
   fullName: CRMScript.NetServer.NSSaleAgent.AddSaleStakeholders(Integer,NSSaleStakeholder[])
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void AddSaleStakeholders(Integer saleId, NSSaleStakeholder[] saleStakeholders)
@@ -222,7 +222,7 @@ items:
   nameWithType: NSSaleAgent.DeleteSaleStakeholders(Integer[])
   fullName: CRMScript.NetServer.NSSaleAgent.DeleteSaleStakeholders(Integer[])
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void DeleteSaleStakeholders(Integer[] saleStakeholderIds)
