--- a/docs/api-reference/CRMScript.NetServer.NSSaleEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSaleEntity.yml
@@ -99,7 +99,7 @@ items:
   nameWithType: NSSaleEntity
   fullName: CRMScript.NetServer.NSSaleEntity
   type: Class
-  summary: 
+  summary: "\nThe Sale Entity contains the sale amount, currency, and sale members. Sales are linked to contacts, persons, and/or projects.\n"
   example: 
 - uid: CRMScript.NetServer.NSSaleEntity.#ctor
   commentId: M:CRMScript.NetServer.NSSaleEntity.#ctor
@@ -111,7 +111,7 @@ items:
   nameWithType: NSSaleEntity.#ctor
   fullName: CRMScript.NetServer.NSSaleEntity.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSSaleEntity class.\n"
   remarks: 
   syntax: 
     content: NSSaleEntity
@@ -1060,7 +1060,7 @@ items:
   nameWithType: NSSaleEntity.SetAppointment(NSAppointment)
   fullName: CRMScript.NetServer.NSSaleEntity.SetAppointment(NSAppointment)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetAppointment(NSAppointment appointment)
@@ -1648,7 +1648,7 @@ items:
   nameWithType: NSSaleEntity.SetReasonSold(NSReasonSold)
   fullName: CRMScript.NetServer.NSSaleEntity.SetReasonSold(NSReasonSold)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetReasonSold(NSReasonSold reasonSold)
@@ -1670,7 +1670,7 @@ items:
   nameWithType: NSSaleEntity.SetReasonStalled(NSReasonStalled)
   fullName: CRMScript.NetServer.NSSaleEntity.SetReasonStalled(NSReasonStalled)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetReasonStalled(NSReasonStalled reasonStalled)
@@ -1758,7 +1758,7 @@ items:
   nameWithType: NSSaleEntity.SetSaleStakeholders(NSSaleStakeholder[])
   fullName: CRMScript.NetServer.NSSaleEntity.SetSaleStakeholders(NSSaleStakeholder[])
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetSaleStakeholders(NSSaleStakeholder[] saleStakeholders)
@@ -1802,7 +1802,7 @@ items:
   nameWithType: NSSaleEntity.SetSaleType(NSSaleType)
   fullName: CRMScript.NetServer.NSSaleEntity.SetSaleType(NSSaleType)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetSaleType(NSSaleType saleType)
