--- a/docs/api-reference/CRMScript.NetServer.NSSaleStageEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSaleStageEntity.yml
@@ -23,7 +23,7 @@ items:
   nameWithType: NSSaleStageEntity
   fullName: CRMScript.NetServer.NSSaleStageEntity
   type: Class
-  summary: 
+  summary: "\nThis entity represents a sale stage with a default percentage rating.\n"
   example: 
 - uid: CRMScript.NetServer.NSSaleStageEntity.#ctor
   commentId: M:CRMScript.NetServer.NSSaleStageEntity.#ctor
@@ -35,7 +35,7 @@ items:
   nameWithType: NSSaleStageEntity.#ctor
   fullName: CRMScript.NetServer.NSSaleStageEntity.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSSaleStageEntity class.\n"
   remarks: 
   syntax: 
     content: NSSaleStageEntity
