--- a/docs/api-reference/CRMScript.NetServer.NSSaleStakeholder.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSaleStakeholder.yml
@@ -49,7 +49,7 @@ items:
   nameWithType: NSSaleStakeholder
   fullName: CRMScript.NetServer.NSSaleStakeholder
   type: Class
-  summary: 
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSSaleStakeholder.#ctor
   commentId: M:CRMScript.NetServer.NSSaleStakeholder.#ctor
@@ -61,7 +61,7 @@ items:
   nameWithType: NSSaleStakeholder.#ctor
   fullName: CRMScript.NetServer.NSSaleStakeholder.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSSaleStakeholder class.\n"
   remarks: 
   syntax: 
     content: NSSaleStakeholder
