--- a/docs/api-reference/CRMScript.NetServer.NSSaleSummary.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSaleSummary.yml
@@ -67,7 +67,7 @@ items:
   nameWithType: NSSaleSummary
   fullName: CRMScript.NetServer.NSSaleSummary
   type: Class
-  summary: 
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSSaleSummary.#ctor
   commentId: M:CRMScript.NetServer.NSSaleSummary.#ctor
@@ -79,7 +79,7 @@ items:
   nameWithType: NSSaleSummary.#ctor
   fullName: CRMScript.NetServer.NSSaleSummary.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSSaleSummary class.\n"
   remarks: 
   syntax: 
     content: NSSaleSummary
