--- a/docs/api-reference/CRMScript.NetServer.NSSaleSummaryItem.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSaleSummaryItem.yml
@@ -31,7 +31,7 @@ items:
   nameWithType: NSSaleSummaryItem
   fullName: CRMScript.NetServer.NSSaleSummaryItem
   type: Class
-  summary: 
+  summary: "\nSale Summary item.\n"
   example: 
 - uid: CRMScript.NetServer.NSSaleSummaryItem.#ctor
   commentId: M:CRMScript.NetServer.NSSaleSummaryItem.#ctor
@@ -43,7 +43,7 @@ items:
   nameWithType: NSSaleSummaryItem.#ctor
   fullName: CRMScript.NetServer.NSSaleSummaryItem.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSSaleSummaryItem class.\n"
   remarks: 
   syntax: 
     content: NSSaleSummaryItem
