--- a/docs/api-reference/CRMScript.NetServer.NSSaleType.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSaleType.yml
@@ -17,7 +17,7 @@ items:
   nameWithType: NSSaleType
   fullName: CRMScript.NetServer.NSSaleType
   type: Class
-  summary: 
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSSaleType.#ctor
   commentId: M:CRMScript.NetServer.NSSaleType.#ctor
@@ -29,7 +29,7 @@ items:
   nameWithType: NSSaleType.#ctor
   fullName: CRMScript.NetServer.NSSaleType.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSSaleType class.\n"
   remarks: 
   syntax: 
     content: NSSaleType
