--- a/docs/api-reference/CRMScript.NetServer.NSSaleTypeEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSaleTypeEntity.yml
@@ -55,7 +55,7 @@ items:
   nameWithType: NSSaleTypeEntity
   fullName: CRMScript.NetServer.NSSaleTypeEntity
   type: Class
-  summary: 
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSSaleTypeEntity.#ctor
   commentId: M:CRMScript.NetServer.NSSaleTypeEntity.#ctor
@@ -67,7 +67,7 @@ items:
   nameWithType: NSSaleTypeEntity.#ctor
   fullName: CRMScript.NetServer.NSSaleTypeEntity.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSSaleTypeEntity class.\n"
   remarks: 
   syntax: 
     content: NSSaleTypeEntity
