--- a/docs/api-reference/CRMScript.NetServer.NSSaleTypeStageLink.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSaleTypeStageLink.yml
@@ -27,7 +27,7 @@ items:
   nameWithType: NSSaleTypeStageLink
   fullName: CRMScript.NetServer.NSSaleTypeStageLink
   type: Class
-  summary: 
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSSaleTypeStageLink.#ctor
   commentId: M:CRMScript.NetServer.NSSaleTypeStageLink.#ctor
@@ -39,7 +39,7 @@ items:
   nameWithType: NSSaleTypeStageLink.#ctor
   fullName: CRMScript.NetServer.NSSaleTypeStageLink.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSSaleTypeStageLink class.\n"
   remarks: 
   syntax: 
     content: NSSaleTypeStageLink
@@ -54,7 +54,7 @@ items:
   nameWithType: NSSaleTypeStageLink.GetProbability()
   fullName: CRMScript.NetServer.NSSaleTypeStageLink.GetProbability()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetProbability()
@@ -72,7 +72,7 @@ items:
   nameWithType: NSSaleTypeStageLink.GetProbId()
   fullName: CRMScript.NetServer.NSSaleTypeStageLink.GetProbId()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetProbId()
@@ -90,7 +90,7 @@ items:
   nameWithType: NSSaleTypeStageLink.GetProbName()
   fullName: CRMScript.NetServer.NSSaleTypeStageLink.GetProbName()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetProbName()
@@ -108,7 +108,7 @@ items:
   nameWithType: NSSaleTypeStageLink.GetProbTooltip()
   fullName: CRMScript.NetServer.NSSaleTypeStageLink.GetProbTooltip()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetProbTooltip()
@@ -126,7 +126,7 @@ items:
   nameWithType: NSSaleTypeStageLink.GetSaleTypeId()
   fullName: CRMScript.NetServer.NSSaleTypeStageLink.GetSaleTypeId()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetSaleTypeId()
@@ -144,7 +144,7 @@ items:
   nameWithType: NSSaleTypeStageLink.GetSaleTypeName()
   fullName: CRMScript.NetServer.NSSaleTypeStageLink.GetSaleTypeName()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetSaleTypeName()
@@ -162,7 +162,7 @@ items:
   nameWithType: NSSaleTypeStageLink.GetSaleTypeStageLinkId()
   fullName: CRMScript.NetServer.NSSaleTypeStageLink.GetSaleTypeStageLinkId()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetSaleTypeStageLinkId()
@@ -180,7 +180,7 @@ items:
   nameWithType: NSSaleTypeStageLink.GetSaleTypeTooltip()
   fullName: CRMScript.NetServer.NSSaleTypeStageLink.GetSaleTypeTooltip()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetSaleTypeTooltip()
@@ -198,7 +198,7 @@ items:
   nameWithType: NSSaleTypeStageLink.SetProbability(Integer)
   fullName: CRMScript.NetServer.NSSaleTypeStageLink.SetProbability(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetProbability(Integer prob)
@@ -219,7 +219,7 @@ items:
   nameWithType: NSSaleTypeStageLink.SetProbId(Integer)
   fullName: CRMScript.NetServer.NSSaleTypeStageLink.SetProbId(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetProbId(Integer id)
@@ -240,7 +240,7 @@ items:
   nameWithType: NSSaleTypeStageLink.SetProbName(String)
   fullName: CRMScript.NetServer.NSSaleTypeStageLink.SetProbName(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetProbName(String name)
@@ -261,7 +261,7 @@ items:
   nameWithType: NSSaleTypeStageLink.SetProbTooltip(String)
   fullName: CRMScript.NetServer.NSSaleTypeStageLink.SetProbTooltip(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetProbTooltip(String tooltip)
@@ -282,7 +282,7 @@ items:
   nameWithType: NSSaleTypeStageLink.SetSaleTypeId(Integer)
   fullName: CRMScript.NetServer.NSSaleTypeStageLink.SetSaleTypeId(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetSaleTypeId(Integer typeId)
@@ -303,7 +303,7 @@ items:
   nameWithType: NSSaleTypeStageLink.SetSaleTypeName(String)
   fullName: CRMScript.NetServer.NSSaleTypeStageLink.SetSaleTypeName(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetSaleTypeName(String typeName)
@@ -324,7 +324,7 @@ items:
   nameWithType: NSSaleTypeStageLink.SetSaleTypeStageLinkId(Integer)
   fullName: CRMScript.NetServer.NSSaleTypeStageLink.SetSaleTypeStageLinkId(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetSaleTypeStageLinkId(Integer linkId)
@@ -345,7 +345,7 @@ items:
   nameWithType: NSSaleTypeStageLink.SetSaleTypeTooltip(String)
   fullName: CRMScript.NetServer.NSSaleTypeStageLink.SetSaleTypeTooltip(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetSaleTypeTooltip(String tooltip)
