--- a/docs/api-reference/CRMScript.NetServer.NSSalesActivity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSalesActivity.yml
@@ -17,7 +17,7 @@ items:
   nameWithType: NSSalesActivity
   fullName: CRMScript.NetServer.NSSalesActivity
   type: Class
-  summary: 
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSSalesActivity.#ctor
   commentId: M:CRMScript.NetServer.NSSalesActivity.#ctor
@@ -29,7 +29,7 @@ items:
   nameWithType: NSSalesActivity.#ctor
   fullName: CRMScript.NetServer.NSSalesActivity.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSSalesActivity class.\n"
   remarks: 
   syntax: 
     content: NSSalesActivity
