--- a/docs/api-reference/CRMScript.NetServer.NSSatellite.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSatellite.yml
@@ -27,7 +27,7 @@ items:
   nameWithType: NSSatellite
   fullName: CRMScript.NetServer.NSSatellite
   type: Class
-  summary: 
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSSatellite.#ctor
   commentId: M:CRMScript.NetServer.NSSatellite.#ctor
@@ -39,7 +39,7 @@ items:
   nameWithType: NSSatellite.#ctor
   fullName: CRMScript.NetServer.NSSatellite.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSSatellite class.\n"
   remarks: 
   syntax: 
     content: NSSatellite
@@ -210,7 +210,7 @@ items:
   nameWithType: NSSatellite.SetArea(NSArea)
   fullName: CRMScript.NetServer.NSSatellite.SetArea(NSArea)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetArea(NSArea area)
@@ -232,7 +232,7 @@ items:
   nameWithType: NSSatellite.SetContact(NSContact)
   fullName: CRMScript.NetServer.NSSatellite.SetContact(NSContact)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetContact(NSContact contact)
@@ -276,7 +276,7 @@ items:
   nameWithType: NSSatellite.SetCreatedBy(NSAssociate)
   fullName: CRMScript.NetServer.NSSatellite.SetCreatedBy(NSAssociate)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetCreatedBy(NSAssociate createdBy)
@@ -364,7 +364,7 @@ items:
   nameWithType: NSSatellite.SetUpdatedBy(NSAssociate)
   fullName: CRMScript.NetServer.NSSatellite.SetUpdatedBy(NSAssociate)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetUpdatedBy(NSAssociate updatedBy)
