--- a/docs/api-reference/CRMScript.NetServer.NSSelectableMDOListItem.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSelectableMDOListItem.yml
@@ -41,7 +41,7 @@ items:
   nameWithType: NSSelectableMDOListItem
   fullName: CRMScript.NetServer.NSSelectableMDOListItem
   type: Class
-  summary: 
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSSelectableMDOListItem.#ctor
   commentId: M:CRMScript.NetServer.NSSelectableMDOListItem.#ctor
@@ -53,7 +53,7 @@ items:
   nameWithType: NSSelectableMDOListItem.#ctor
   fullName: CRMScript.NetServer.NSSelectableMDOListItem.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSSelectableMDOListItem class.\n"
   remarks: 
   syntax: 
     content: NSSelectableMDOListItem
