--- a/docs/api-reference/CRMScript.NetServer.NSSelectionCategory.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSelectionCategory.yml
@@ -17,7 +17,7 @@ items:
   nameWithType: NSSelectionCategory
   fullName: CRMScript.NetServer.NSSelectionCategory
   type: Class
-  summary: 
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSSelectionCategory.#ctor
   commentId: M:CRMScript.NetServer.NSSelectionCategory.#ctor
@@ -29,7 +29,7 @@ items:
   nameWithType: NSSelectionCategory.#ctor
   fullName: CRMScript.NetServer.NSSelectionCategory.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSSelectionCategory class.\n"
   remarks: 
   syntax: 
     content: NSSelectionCategory
