--- a/docs/api-reference/CRMScript.NetServer.NSSelectionEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSelectionEntity.yml
@@ -91,7 +91,7 @@ items:
   nameWithType: NSSelectionEntity
   fullName: CRMScript.NetServer.NSSelectionEntity
   type: Class
-  summary: 
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSSelectionEntity.#ctor
   commentId: M:CRMScript.NetServer.NSSelectionEntity.#ctor
@@ -103,7 +103,7 @@ items:
   nameWithType: NSSelectionEntity.#ctor
   fullName: CRMScript.NetServer.NSSelectionEntity.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSSelectionEntity class.\n"
   remarks: 
   syntax: 
     content: NSSelectionEntity
