--- a/docs/api-reference/CRMScript.NetServer.NSSelectionForFind.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSelectionForFind.yml
@@ -23,7 +23,7 @@ items:
   nameWithType: NSSelectionForFind
   fullName: CRMScript.NetServer.NSSelectionForFind
   type: Class
-  summary: 
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSSelectionForFind.#ctor
   commentId: M:CRMScript.NetServer.NSSelectionForFind.#ctor
@@ -35,7 +35,7 @@ items:
   nameWithType: NSSelectionForFind.#ctor
   fullName: CRMScript.NetServer.NSSelectionForFind.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSSelectionForFind class.\n"
   remarks: 
   syntax: 
     content: NSSelectionForFind
