--- a/docs/api-reference/CRMScript.NetServer.NSSelectionMemberEditValues.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSelectionMemberEditValues.yml
@@ -55,7 +55,7 @@ items:
   nameWithType: NSSelectionMemberEditValues
   fullName: CRMScript.NetServer.NSSelectionMemberEditValues
   type: Class
-  summary: 
+  summary: "\nCarrier object for SelectionMemberEditValues.\n"
   example: 
 - uid: CRMScript.NetServer.NSSelectionMemberEditValues.#ctor
   commentId: M:CRMScript.NetServer.NSSelectionMemberEditValues.#ctor
@@ -67,7 +67,7 @@ items:
   nameWithType: NSSelectionMemberEditValues.#ctor
   fullName: CRMScript.NetServer.NSSelectionMemberEditValues.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSSelectionMemberEditValues class.\n"
   remarks: 
   syntax: 
     content: NSSelectionMemberEditValues
