--- a/docs/api-reference/CRMScript.NetServer.NSSentiment.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSentiment.yml
@@ -15,7 +15,7 @@ items:
   nameWithType: NSSentiment
   fullName: CRMScript.NetServer.NSSentiment
   type: Class
-  summary: 
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSSentiment.#ctor
   commentId: M:CRMScript.NetServer.NSSentiment.#ctor
@@ -27,7 +27,7 @@ items:
   nameWithType: NSSentiment.#ctor
   fullName: CRMScript.NetServer.NSSentiment.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSSentiment class.\n"
   remarks: 
   syntax: 
     content: NSSentiment
