--- a/docs/api-reference/CRMScript.NetServer.NSServiceAuth.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSServiceAuth.yml
@@ -23,7 +23,7 @@ items:
   nameWithType: NSServiceAuth
   fullName: CRMScript.NetServer.NSServiceAuth
   type: Class
-  summary: 
+  summary: "\nProperties for service authentication.\n"
   example: 
 - uid: CRMScript.NetServer.NSServiceAuth.#ctor
   commentId: M:CRMScript.NetServer.NSServiceAuth.#ctor
@@ -35,7 +35,7 @@ items:
   nameWithType: NSServiceAuth.#ctor
   fullName: CRMScript.NetServer.NSServiceAuth.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSServiceAuth class.\n" 
   remarks: 
   syntax: 
     content: NSServiceAuth
