--- a/docs/api-reference/CRMScript.NetServer.NSShipmentMessageEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSShipmentMessageEntity.yml
@@ -53,7 +53,7 @@ items:
   nameWithType: NSShipmentMessageEntity
   fullName: CRMScript.NetServer.NSShipmentMessageEntity
   type: Class
-  summary: 
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSShipmentMessageEntity.#ctor
   commentId: M:CRMScript.NetServer.NSShipmentMessageEntity.#ctor
@@ -65,7 +65,7 @@ items:
   nameWithType: NSShipmentMessageEntity.#ctor
   fullName: CRMScript.NetServer.NSShipmentMessageEntity.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSShipmentMessageEntity class.\n"
   remarks: 
   syntax: 
     content: NSShipmentMessageEntity
