--- a/docs/api-reference/CRMScript.NetServer.NSSignedPublicKey.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSignedPublicKey.yml
@@ -21,7 +21,7 @@ items:
   nameWithType: NSSignedPublicKey
   fullName: CRMScript.NetServer.NSSignedPublicKey
   type: Class
-  summary: 
+  summary: "\nRepresents all licenses for this owner at this site.\n"
   example: 
 - uid: CRMScript.NetServer.NSSignedPublicKey.#ctor
   commentId: M:CRMScript.NetServer.NSSignedPublicKey.#ctor
@@ -33,7 +33,7 @@ items:
   nameWithType: NSSignedPublicKey.#ctor
   fullName: CRMScript.NetServer.NSSignedPublicKey.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSSignedPublicKey class.\n"
   remarks: 
   syntax: 
     content: NSSignedPublicKey
