--- a/docs/api-reference/CRMScript.NetServer.NSSmsConfig.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSmsConfig.yml
@@ -19,7 +19,7 @@ items:
   nameWithType: NSSmsConfig
   fullName: CRMScript.NetServer.NSSmsConfig
   type: Class
-  summary: 
+  summary: "\nSMS settings for Customer Service SMS providers.\n"
   example: 
 - uid: CRMScript.NetServer.NSSmsConfig.#ctor
   commentId: M:CRMScript.NetServer.NSSmsConfig.#ctor
@@ -31,7 +31,7 @@ items:
   nameWithType: NSSmsConfig.#ctor
   fullName: CRMScript.NetServer.NSSmsConfig.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSSmsConfig class.\n"
   remarks: 
   syntax: 
     content: NSSmsConfig
