--- a/docs/api-reference/CRMScript.NetServer.NSSmtpTestResult.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSmtpTestResult.yml
@@ -15,7 +15,7 @@ items:
   nameWithType: NSSmtpTestResult
   fullName: CRMScript.NetServer.NSSmtpTestResult
   type: Class
-  summary: 
+  summary: "\nCarrier containing information about the result of a SMTP test.\n"
   example: 
 - uid: CRMScript.NetServer.NSSmtpTestResult.#ctor
   commentId: M:CRMScript.NetServer.NSSmtpTestResult.#ctor
@@ -27,7 +27,7 @@ items:
   nameWithType: NSSmtpTestResult.#ctor
   fullName: CRMScript.NetServer.NSSmtpTestResult.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSSmtpTestResult class.\n"
   remarks: 
   syntax: 
     content: NSSmtpTestResult
