--- a/docs/api-reference/CRMScript.NetServer.NSSoPrincipalCarrier.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSoPrincipalCarrier.yml
@@ -63,7 +63,7 @@ items:
   nameWithType: NSSoPrincipalCarrier
   fullName: CRMScript.NetServer.NSSoPrincipalCarrier
   type: Class
-  summary: 
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSSoPrincipalCarrier.#ctor
   commentId: M:CRMScript.NetServer.NSSoPrincipalCarrier.#ctor
@@ -75,7 +75,7 @@ items:
   nameWithType: NSSoPrincipalCarrier.#ctor
   fullName: CRMScript.NetServer.NSSoPrincipalCarrier.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSSoPrincipalCarrier class.\n"
   remarks: 
   syntax: 
     content: NSSoPrincipalCarrier
@@ -90,7 +90,7 @@ items:
   nameWithType: NSSoPrincipalCarrier.GetAssociate()
   fullName: CRMScript.NetServer.NSSoPrincipalCarrier.GetAssociate()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetAssociate()
@@ -108,7 +108,7 @@ items:
   nameWithType: NSSoPrincipalCarrier.GetAssociateId()
   fullName: CRMScript.NetServer.NSSoPrincipalCarrier.GetAssociateId()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetAssociateId()
@@ -126,7 +126,7 @@ items:
   nameWithType: NSSoPrincipalCarrier.GetBusinessId()
   fullName: CRMScript.NetServer.NSSoPrincipalCarrier.GetBusinessId()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetBusinessId()
@@ -144,7 +144,7 @@ items:
   nameWithType: NSSoPrincipalCarrier.GetCategoryId()
   fullName: CRMScript.NetServer.NSSoPrincipalCarrier.GetCategoryId()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetCategoryId()
@@ -162,7 +162,7 @@ items:
   nameWithType: NSSoPrincipalCarrier.GetContactId()
   fullName: CRMScript.NetServer.NSSoPrincipalCarrier.GetContactId()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetContactId()
@@ -180,7 +180,7 @@ items:
   nameWithType: NSSoPrincipalCarrier.GetContactOwner()
   fullName: CRMScript.NetServer.NSSoPrincipalCarrier.GetContactOwner()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetContactOwner()
@@ -198,7 +198,7 @@ items:
   nameWithType: NSSoPrincipalCarrier.GetCountryId()
   fullName: CRMScript.NetServer.NSSoPrincipalCarrier.GetCountryId()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetCountryId()
@@ -216,7 +216,7 @@ items:
   nameWithType: NSSoPrincipalCarrier.GetDatabaseContextIdentifier()
   fullName: CRMScript.NetServer.NSSoPrincipalCarrier.GetDatabaseContextIdentifier()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetDatabaseContextIdentifier()
@@ -234,7 +234,7 @@ items:
   nameWithType: NSSoPrincipalCarrier.GetEjAccessLevel()
   fullName: CRMScript.NetServer.NSSoPrincipalCarrier.GetEjAccessLevel()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetEjAccessLevel()
@@ -252,7 +252,7 @@ items:
   nameWithType: NSSoPrincipalCarrier.GetEjUserId()
   fullName: CRMScript.NetServer.NSSoPrincipalCarrier.GetEjUserId()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetEjUserId()
@@ -270,7 +270,7 @@ items:
   nameWithType: NSSoPrincipalCarrier.GetEjUserStatus()
   fullName: CRMScript.NetServer.NSSoPrincipalCarrier.GetEjUserStatus()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetEjUserStatus()
@@ -288,7 +288,7 @@ items:
   nameWithType: NSSoPrincipalCarrier.GetEMailAddress()
   fullName: CRMScript.NetServer.NSSoPrincipalCarrier.GetEMailAddress()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetEMailAddress()
@@ -306,7 +306,7 @@ items:
   nameWithType: NSSoPrincipalCarrier.GetFullName()
   fullName: CRMScript.NetServer.NSSoPrincipalCarrier.GetFullName()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetFullName()
@@ -324,7 +324,7 @@ items:
   nameWithType: NSSoPrincipalCarrier.GetFunctionRights()
   fullName: CRMScript.NetServer.NSSoPrincipalCarrier.GetFunctionRights()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String[] GetFunctionRights()
@@ -342,7 +342,7 @@ items:
   nameWithType: NSSoPrincipalCarrier.GetGroupId()
   fullName: CRMScript.NetServer.NSSoPrincipalCarrier.GetGroupId()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetGroupId()
@@ -360,7 +360,7 @@ items:
   nameWithType: NSSoPrincipalCarrier.GetHomeCountryId()
   fullName: CRMScript.NetServer.NSSoPrincipalCarrier.GetHomeCountryId()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetHomeCountryId()
@@ -378,7 +378,7 @@ items:
   nameWithType: NSSoPrincipalCarrier.GetIsPerson()
   fullName: CRMScript.NetServer.NSSoPrincipalCarrier.GetIsPerson()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Bool GetIsPerson()
@@ -396,7 +396,7 @@ items:
   nameWithType: NSSoPrincipalCarrier.GetLicenses()
   fullName: CRMScript.NetServer.NSSoPrincipalCarrier.GetLicenses()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: NSGrantedModuleLicense[] GetLicenses()
@@ -414,7 +414,7 @@ items:
   nameWithType: NSSoPrincipalCarrier.GetPersonId()
   fullName: CRMScript.NetServer.NSSoPrincipalCarrier.GetPersonId()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetPersonId()
@@ -432,7 +432,7 @@ items:
   nameWithType: NSSoPrincipalCarrier.GetProvidedCredentials()
   fullName: CRMScript.NetServer.NSSoPrincipalCarrier.GetProvidedCredentials()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: NSProvidedCredential[] GetProvidedCredentials()
@@ -450,7 +450,7 @@ items:
   nameWithType: NSSoPrincipalCarrier.GetRoleDescription()
   fullName: CRMScript.NetServer.NSSoPrincipalCarrier.GetRoleDescription()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetRoleDescription()
@@ -468,7 +468,7 @@ items:
   nameWithType: NSSoPrincipalCarrier.GetRoleId()
   fullName: CRMScript.NetServer.NSSoPrincipalCarrier.GetRoleId()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetRoleId()
@@ -486,7 +486,7 @@ items:
   nameWithType: NSSoPrincipalCarrier.GetRoleName()
   fullName: CRMScript.NetServer.NSSoPrincipalCarrier.GetRoleName()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetRoleName()
@@ -504,7 +504,7 @@ items:
   nameWithType: NSSoPrincipalCarrier.GetRoleType()
   fullName: CRMScript.NetServer.NSSoPrincipalCarrier.GetRoleType()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetRoleType()
@@ -522,7 +522,7 @@ items:
   nameWithType: NSSoPrincipalCarrier.GetSecondaryGroups()
   fullName: CRMScript.NetServer.NSSoPrincipalCarrier.GetSecondaryGroups()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer[] GetSecondaryGroups()
@@ -540,7 +540,7 @@ items:
   nameWithType: NSSoPrincipalCarrier.GetUserType()
   fullName: CRMScript.NetServer.NSSoPrincipalCarrier.GetUserType()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetUserType()
@@ -558,7 +558,7 @@ items:
   nameWithType: NSSoPrincipalCarrier.SetAssociate(String)
   fullName: CRMScript.NetServer.NSSoPrincipalCarrier.SetAssociate(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetAssociate(String associate)
@@ -579,7 +579,7 @@ items:
   nameWithType: NSSoPrincipalCarrier.SetAssociateId(Integer)
   fullName: CRMScript.NetServer.NSSoPrincipalCarrier.SetAssociateId(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetAssociateId(Integer id)
@@ -600,7 +600,7 @@ items:
   nameWithType: NSSoPrincipalCarrier.SetBusinessId(Integer)
   fullName: CRMScript.NetServer.NSSoPrincipalCarrier.SetBusinessId(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetBusinessId(Integer id)
@@ -621,7 +621,7 @@ items:
   nameWithType: NSSoPrincipalCarrier.SetCategoryId(Integer)
   fullName: CRMScript.NetServer.NSSoPrincipalCarrier.SetCategoryId(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetCategoryId(Integer id)
@@ -642,7 +642,7 @@ items:
   nameWithType: NSSoPrincipalCarrier.SetContactId(Integer)
   fullName: CRMScript.NetServer.NSSoPrincipalCarrier.SetContactId(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetContactId(Integer id)
@@ -663,7 +663,7 @@ items:
   nameWithType: NSSoPrincipalCarrier.SetContactOwner(Integer)
   fullName: CRMScript.NetServer.NSSoPrincipalCarrier.SetContactOwner(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetContactOwner(Integer owner)
@@ -684,7 +684,7 @@ items:
   nameWithType: NSSoPrincipalCarrier.SetCountryId(Integer)
   fullName: CRMScript.NetServer.NSSoPrincipalCarrier.SetCountryId(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetCountryId(Integer id)
@@ -705,7 +705,7 @@ items:
   nameWithType: NSSoPrincipalCarrier.SetDatabaseContextIdentifier(String)
   fullName: CRMScript.NetServer.NSSoPrincipalCarrier.SetDatabaseContextIdentifier(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetDatabaseContextIdentifier(String id)
@@ -726,7 +726,7 @@ items:
   nameWithType: NSSoPrincipalCarrier.SetEjAccessLevel(Integer)
   fullName: CRMScript.NetServer.NSSoPrincipalCarrier.SetEjAccessLevel(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetEjAccessLevel(Integer level)
@@ -747,7 +747,7 @@ items:
   nameWithType: NSSoPrincipalCarrier.SetEjUserId(Integer)
   fullName: CRMScript.NetServer.NSSoPrincipalCarrier.SetEjUserId(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetEjUserId(Integer id)
@@ -768,7 +768,7 @@ items:
   nameWithType: NSSoPrincipalCarrier.SetEjUserStatus(Integer)
   fullName: CRMScript.NetServer.NSSoPrincipalCarrier.SetEjUserStatus(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetEjUserStatus(Integer status)
@@ -789,7 +789,7 @@ items:
   nameWithType: NSSoPrincipalCarrier.SetEMailAddress(String)
   fullName: CRMScript.NetServer.NSSoPrincipalCarrier.SetEMailAddress(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetEMailAddress(String email)
@@ -810,7 +810,7 @@ items:
   nameWithType: NSSoPrincipalCarrier.SetFullName(String)
   fullName: CRMScript.NetServer.NSSoPrincipalCarrier.SetFullName(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetFullName(String name)
@@ -831,7 +831,7 @@ items:
   nameWithType: NSSoPrincipalCarrier.SetFunctionRights(String[])
   fullName: CRMScript.NetServer.NSSoPrincipalCarrier.SetFunctionRights(String[])
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetFunctionRights(String[] rights)
@@ -852,7 +852,7 @@ items:
   nameWithType: NSSoPrincipalCarrier.SetGroupId(Integer)
   fullName: CRMScript.NetServer.NSSoPrincipalCarrier.SetGroupId(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetGroupId(Integer id)
@@ -873,7 +873,7 @@ items:
   nameWithType: NSSoPrincipalCarrier.SetHomeCountryId(Integer)
   fullName: CRMScript.NetServer.NSSoPrincipalCarrier.SetHomeCountryId(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetHomeCountryId(Integer id)
@@ -894,7 +894,7 @@ items:
   nameWithType: NSSoPrincipalCarrier.SetIsPerson(Bool)
   fullName: CRMScript.NetServer.NSSoPrincipalCarrier.SetIsPerson(Bool)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetIsPerson(Bool isPerson)
@@ -915,7 +915,7 @@ items:
   nameWithType: NSSoPrincipalCarrier.SetLicenses(NSGrantedModuleLicense[])
   fullName: CRMScript.NetServer.NSSoPrincipalCarrier.SetLicenses(NSGrantedModuleLicense[])
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetLicenses(NSGrantedModuleLicense[] licenses)
@@ -936,7 +936,7 @@ items:
   nameWithType: NSSoPrincipalCarrier.SetPersonId(Integer)
   fullName: CRMScript.NetServer.NSSoPrincipalCarrier.SetPersonId(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetPersonId(Integer id)
@@ -957,7 +957,7 @@ items:
   nameWithType: NSSoPrincipalCarrier.SetProvidedCredentials(NSProvidedCredential[])
   fullName: CRMScript.NetServer.NSSoPrincipalCarrier.SetProvidedCredentials(NSProvidedCredential[])
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetProvidedCredentials(NSProvidedCredential[] credentials)
@@ -978,7 +978,7 @@ items:
   nameWithType: NSSoPrincipalCarrier.SetRoleDescription(String)
   fullName: CRMScript.NetServer.NSSoPrincipalCarrier.SetRoleDescription(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetRoleDescription(String description)
@@ -999,7 +999,7 @@ items:
   nameWithType: NSSoPrincipalCarrier.SetRoleId(Integer)
   fullName: CRMScript.NetServer.NSSoPrincipalCarrier.SetRoleId(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetRoleId(Integer id)
@@ -1020,7 +1020,7 @@ items:
   nameWithType: NSSoPrincipalCarrier.SetRoleName(String)
   fullName: CRMScript.NetServer.NSSoPrincipalCarrier.SetRoleName(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetRoleName(String name)
@@ -1041,7 +1041,7 @@ items:
   nameWithType: NSSoPrincipalCarrier.SetRoleType(Integer)
   fullName: CRMScript.NetServer.NSSoPrincipalCarrier.SetRoleType(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetRoleType(Integer type)
@@ -1062,7 +1062,7 @@ items:
   nameWithType: NSSoPrincipalCarrier.SetSecondaryGroups(Integer[])
   fullName: CRMScript.NetServer.NSSoPrincipalCarrier.SetSecondaryGroups(Integer[])
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetSecondaryGroups(Integer[] groups)
@@ -1083,7 +1083,7 @@ items:
   nameWithType: NSSoPrincipalCarrier.SetUserType(Integer)
   fullName: CRMScript.NetServer.NSSoPrincipalCarrier.SetUserType(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetUserType(Integer type)
