--- a/docs/api-reference/CRMScript.NetServer.NSSource.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSource.yml
@@ -17,7 +17,7 @@ items:
   nameWithType: NSSource
   fullName: CRMScript.NetServer.NSSource
   type: Class
-  summary: 
+  summary: "\nSource of a sale.\n"
   example: 
 - uid: CRMScript.NetServer.NSSource.#ctor
   commentId: M:CRMScript.NetServer.NSSource.#ctor
@@ -29,7 +29,7 @@ items:
   nameWithType: NSSource.#ctor
   fullName: CRMScript.NetServer.NSSource.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSSource class.\n"
   remarks: 
   syntax: 
     content: NSSource
