--- a/docs/api-reference/CRMScript.NetServer.NSStatisticsDataSet.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSStatisticsDataSet.yml
@@ -17,7 +17,7 @@ items:
   nameWithType: NSStatisticsDataSet
   fullName: CRMScript.NetServer.NSStatisticsDataSet
   type: Class
-  summary: 
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSStatisticsDataSet.#ctor
   commentId: M:CRMScript.NetServer.NSStatisticsDataSet.#ctor
@@ -29,7 +29,7 @@ items:
   nameWithType: NSStatisticsDataSet.#ctor
   fullName: CRMScript.NetServer.NSStatisticsDataSet.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSStatisticsDataSet class.\n"
   remarks: 
   syntax: 
     content: NSStatisticsDataSet
