--- a/docs/api-reference/CRMScript.NetServer.NSStatisticsDataValue.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSStatisticsDataValue.yml
@@ -17,7 +17,7 @@ items:
   nameWithType: NSStatisticsDataValue
   fullName: CRMScript.NetServer.NSStatisticsDataValue
   type: Class
-  summary: 
+  summary: "\nContains a single data value in a data set, used by CS for Status Screen reports.\n"
   example: 
 - uid: CRMScript.NetServer.NSStatisticsDataValue.#ctor
   commentId: M:CRMScript.NetServer.NSStatisticsDataValue.#ctor
@@ -29,7 +29,7 @@ items:
   nameWithType: NSStatisticsDataValue.#ctor
   fullName: CRMScript.NetServer.NSStatisticsDataValue.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSStatisticsDataValue class.\n"
   remarks: 
   syntax: 
     content: NSStatisticsDataValue
