--- a/docs/api-reference/CRMScript.NetServer.NSStatusMonitor.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSStatusMonitor.yml
@@ -41,7 +41,7 @@ items:
   nameWithType: NSStatusMonitor
   fullName: CRMScript.NetServer.NSStatusMonitor
   type: Class
-  summary: 
+  summary: "\nDefinition of all properties for a status monitor.\n"
   example: 
 - uid: CRMScript.NetServer.NSStatusMonitor.#ctor
   commentId: M:CRMScript.NetServer.NSStatusMonitor.#ctor
@@ -53,7 +53,7 @@ items:
   nameWithType: NSStatusMonitor.#ctor
   fullName: CRMScript.NetServer.NSStatusMonitor.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSStatusMonitor class.\n"
   remarks: 
   syntax: 
     content: NSStatusMonitor
