--- a/docs/api-reference/CRMScript.NetServer.NSStatusMonitorPeriods.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSStatusMonitorPeriods.yml
@@ -17,7 +17,7 @@ items:
   nameWithType: NSStatusMonitorPeriods
   fullName: CRMScript.NetServer.NSStatusMonitorPeriods
   type: Class
-  summary: 
+  summary: "\nObsolete, use SaintConfiguration carrier and methods instead. Was:Definition of the three periods for status monitors.\n"
   example: 
 - uid: CRMScript.NetServer.NSStatusMonitorPeriods.#ctor
   commentId: M:CRMScript.NetServer.NSStatusMonitorPeriods.#ctor
@@ -29,7 +29,7 @@ items:
   nameWithType: NSStatusMonitorPeriods.#ctor
   fullName: CRMScript.NetServer.NSStatusMonitorPeriods.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSStatusMonitorPeriods class.\n"
   remarks: 
   syntax: 
     content: NSStatusMonitorPeriods
