--- a/docs/api-reference/CRMScript.NetServer.NSStream.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSStream.yml
@@ -13,7 +13,7 @@ items:
   nameWithType: NSStream
   fullName: CRMScript.NetServer.NSStream
   type: Class
-  summary: 
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSStream.#ctor
   commentId: M:CRMScript.NetServer.NSStream.#ctor
@@ -25,7 +25,7 @@ items:
   nameWithType: NSStream.#ctor
   fullName: CRMScript.NetServer.NSStream.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSStream class.\n"
   remarks: 
   syntax: 
     content: NSStream
@@ -40,7 +40,7 @@ items:
   nameWithType: NSStream.GetStream()
   fullName: CRMScript.NetServer.NSStream.GetStream()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Byte[]GetStream()
@@ -58,7 +58,7 @@ items:
   nameWithType: NSStream.SetStream(Byte[])
   fullName: CRMScript.NetServer.NSStream.SetStream(Byte[])
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetStream(Byte[] stream)
