--- a/docs/api-reference/CRMScript.NetServer.NSSuggestedAppointment.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSuggestedAppointment.yml
@@ -39,7 +39,7 @@ items:
   nameWithType: NSSuggestedAppointment
   fullName: CRMScript.NetServer.NSSuggestedAppointment
   type: Class
-  summary: 
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSSuggestedAppointment.#ctor
   commentId: M:CRMScript.NetServer.NSSuggestedAppointment.#ctor
@@ -51,7 +51,7 @@ items:
   nameWithType: NSSuggestedAppointment.#ctor
   fullName: CRMScript.NetServer.NSSuggestedAppointment.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSSuggestedAppointment class.\n"
   remarks: 
   syntax: 
     content: NSSuggestedAppointment
