--- a/docs/api-reference/CRMScript.NetServer.NSSuggestedAppointmentEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSuggestedAppointmentEntity.yml
@@ -39,7 +39,7 @@ items:
   nameWithType: NSSuggestedAppointmentEntity
   fullName: CRMScript.NetServer.NSSuggestedAppointmentEntity
   type: Class
-  summary: 
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSSuggestedAppointmentEntity.#ctor
   commentId: M:CRMScript.NetServer.NSSuggestedAppointmentEntity.#ctor
@@ -51,7 +51,7 @@ items:
   nameWithType: NSSuggestedAppointmentEntity.#ctor
   fullName: CRMScript.NetServer.NSSuggestedAppointmentEntity.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSSuggestedAppointmentEntity class.\n"
   remarks: 
   syntax: 
     content: NSSuggestedAppointmentEntity
