--- a/docs/api-reference/CRMScript.NetServer.NSSystemEventEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSystemEventEntity.yml
@@ -31,7 +31,7 @@ items:
   nameWithType: NSSystemEventEntity
   fullName: CRMScript.NetServer.NSSystemEventEntity
   type: Class
-  summary: 
+  summary: "\nEntity for system events.\n"
   example: 
 - uid: CRMScript.NetServer.NSSystemEventEntity.#ctor
   commentId: M:CRMScript.NetServer.NSSystemEventEntity.#ctor
@@ -43,7 +43,7 @@ items:
   nameWithType: NSSystemEventEntity.#ctor
   fullName: CRMScript.NetServer.NSSystemEventEntity.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSSystemEventEntity class.\n"
   remarks: 
   syntax: 
     content: NSSystemEventEntity
