--- a/docs/api-reference/CRMScript.NetServer.NSTableRight.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTableRight.yml
@@ -17,7 +17,7 @@ items:
   nameWithType: NSTableRight
   fullName: CRMScript.NetServer.NSTableRight
   type: Class
-  summary: 
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSTableRight.#ctor
   commentId: M:CRMScript.NetServer.NSTableRight.#ctor
@@ -29,7 +29,7 @@ items:
   nameWithType: NSTableRight.#ctor
   fullName: CRMScript.NetServer.NSTableRight.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSTableRight class.\n"
   remarks: 
   syntax: 
     content: NSTableRight
@@ -44,7 +44,7 @@ items:
   nameWithType: NSTableRight.GetMask()
   fullName: CRMScript.NetServer.NSTableRight.GetMask()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetMask()
@@ -62,7 +62,7 @@ items:
   nameWithType: NSTableRight.GetReason()
   fullName: CRMScript.NetServer.NSTableRight.GetReason()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetReason()
@@ -80,7 +80,7 @@ items:
   nameWithType: NSTableRight.GetTableRight()
   fullName: CRMScript.NetServer.NSTableRight.GetTableRight()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetTableRight()
@@ -98,7 +98,7 @@ items:
   nameWithType: NSTableRight.SetMask(Integer)
   fullName: CRMScript.NetServer.NSTableRight.SetMask(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetMask(Integer mask)
@@ -119,7 +119,7 @@ items:
   nameWithType: NSTableRight.SetReason(String)
   fullName: CRMScript.NetServer.NSTableRight.SetReason(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetReason(String reason)
@@ -140,7 +140,7 @@ items:
   nameWithType: NSTableRight.SetTableRight(Integer)
   fullName: CRMScript.NetServer.NSTableRight.SetTableRight(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetTableRight(Integer right)
