--- a/docs/api-reference/CRMScript.NetServer.NSTask.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTask.yml
@@ -17,7 +17,7 @@ items:
   nameWithType: NSTask
   fullName: CRMScript.NetServer.NSTask
   type: Class
-  summary: 
+  summary: "\nType of an appointment.\n"
   example: 
 - uid: CRMScript.NetServer.NSTask.#ctor
   commentId: M:CRMScript.NetServer.NSTask.#ctor
@@ -29,7 +29,7 @@ items:
   nameWithType: NSTask.#ctor
   fullName: CRMScript.NetServer.NSTask.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSTask class.\n"
   remarks: 
   syntax: 
     content: NSTask
