--- a/docs/api-reference/CRMScript.NetServer.NSTemplateVariablesParameters.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTemplateVariablesParameters.yml
@@ -41,7 +41,7 @@ items:
   nameWithType: NSTemplateVariablesParameters
   fullName: CRMScript.NetServer.NSTemplateVariablesParameters
   type: Class
-  summary: 
+  summary: "\nParameters specifying source and properties for template variable substitution.\n"
   example: 
 - uid: CRMScript.NetServer.NSTemplateVariablesParameters.#ctor
   commentId: M:CRMScript.NetServer.NSTemplateVariablesParameters.#ctor
@@ -53,7 +53,7 @@ items:
   nameWithType: NSTemplateVariablesParameters.#ctor
   fullName: CRMScript.NetServer.NSTemplateVariablesParameters.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSTemplateVariablesParameters class.\n"
   remarks: 
   syntax: 
     content: NSTemplateVariablesParameters
@@ -68,7 +68,7 @@ items:
   nameWithType: NSTemplateVariablesParameters.GetAppointmentId()
   fullName: CRMScript.NetServer.NSTemplateVariablesParameters.GetAppointmentId()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetAppointmentId()
@@ -88,7 +88,7 @@ items:
   nameWithType: NSTemplateVariablesParameters.GetContactId()
   fullName: CRMScript.NetServer.NSTemplateVariablesParameters.GetContactId()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetContactId()
@@ -168,7 +168,7 @@ items:
   nameWithType: NSTemplateVariablesParameters.GetDocumentId()
   fullName: CRMScript.NetServer.NSTemplateVariablesParameters.GetDocumentId()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetDocumentId()
@@ -208,7 +208,7 @@ items:
   nameWithType: NSTemplateVariablesParameters.GetPersonId()
   fullName: CRMScript.NetServer.NSTemplateVariablesParameters.GetPersonId()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetPersonId()
@@ -228,7 +228,7 @@ items:
   nameWithType: NSTemplateVariablesParameters.GetProductKey()
   fullName: CRMScript.NetServer.NSTemplateVariablesParameters.GetProductKey()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetProductKey()
@@ -248,7 +248,7 @@ items:
   nameWithType: NSTemplateVariablesParameters.GetProjectId()
   fullName: CRMScript.NetServer.NSTemplateVariablesParameters.GetProjectId()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetProjectId()
@@ -268,7 +268,7 @@ items:
   nameWithType: NSTemplateVariablesParameters.GetQuoteAlternativeId()
   fullName: CRMScript.NetServer.NSTemplateVariablesParameters.GetQuoteAlternativeId()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetQuoteAlternativeId()
@@ -288,7 +288,7 @@ items:
   nameWithType: NSTemplateVariablesParameters.GetQuoteLineId()
   fullName: CRMScript.NetServer.NSTemplateVariablesParameters.GetQuoteLineId()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetQuoteLineId()
@@ -308,7 +308,7 @@ items:
   nameWithType: NSTemplateVariablesParameters.GetSaleId()
   fullName: CRMScript.NetServer.NSTemplateVariablesParameters.GetSaleId()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetSaleId()
@@ -328,7 +328,7 @@ items:
   nameWithType: NSTemplateVariablesParameters.GetSelectionId()
   fullName: CRMScript.NetServer.NSTemplateVariablesParameters.GetSelectionId()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetSelectionId()
@@ -368,7 +368,7 @@ items:
   nameWithType: NSTemplateVariablesParameters.SetAppointmentId(Integer)
   fullName: CRMScript.NetServer.NSTemplateVariablesParameters.SetAppointmentId(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetAppointmentId(Integer appointmentId)
@@ -390,7 +390,7 @@ items:
   nameWithType: NSTemplateVariablesParameters.SetContactId(Integer)
   fullName: CRMScript.NetServer.NSTemplateVariablesParameters.SetContactId(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetContactId(Integer contactId)
@@ -412,7 +412,7 @@ items:
   nameWithType: NSTemplateVariablesParameters.SetCultureName(String)
   fullName: CRMScript.NetServer.NSTemplateVariablesParameters.SetCultureName(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetCultureName(String cultureName)
@@ -434,7 +434,7 @@ items:
   nameWithType: NSTemplateVariablesParameters.SetCustomTags(String[])
   fullName: CRMScript.NetServer.NSTemplateVariablesParameters.SetCustomTags(String[])
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetCustomTags(String[] customTags)
@@ -456,7 +456,7 @@ items:
   nameWithType: NSTemplateVariablesParameters.SetDocumentEntity(NSDocumentEntity)
   fullName: CRMScript.NetServer.NSTemplateVariablesParameters.SetDocumentEntity(NSDocumentEntity)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetDocumentEntity(NSDocumentEntity documentEntity)
@@ -478,7 +478,7 @@ items:
   nameWithType: NSTemplateVariablesParameters.SetDocumentId(Integer)
   fullName: CRMScript.NetServer.NSTemplateVariablesParameters.SetDocumentId(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetDocumentId(Integer documentId)
@@ -500,7 +500,7 @@ items:
   nameWithType: NSTemplateVariablesParameters.SetEncoding(Integer)
   fullName: CRMScript.NetServer.NSTemplateVariablesParameters.SetEncoding(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: "\nNon-text formats such as MsWord or Excel should be Base64 encoded in the source string.\n"
   syntax: 
     content: Void SetEncoding(Integer encoding)
@@ -522,7 +522,7 @@ items:
   nameWithType: NSTemplateVariablesParameters.SetPersonId(Integer)
   fullName: CRMScript.NetServer.NSTemplateVariablesParameters.SetPersonId(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetPersonId(Integer personId)
@@ -544,7 +544,7 @@ items:
   nameWithType: NSTemplateVariablesParameters.SetProductKey(String)
   fullName: CRMScript.NetServer.NSTemplateVariablesParameters.SetProductKey(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetProductKey(String productKey)
@@ -566,7 +566,7 @@ items:
   nameWithType: NSTemplateVariablesParameters.SetProjectId(Integer)
   fullName: CRMScript.NetServer.NSTemplateVariablesParameters.SetProjectId(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetProjectId(Integer projectId)
@@ -588,7 +588,7 @@ items:
   nameWithType: NSTemplateVariablesParameters.SetQuoteAlternativeId(Integer)
   fullName: CRMScript.NetServer.NSTemplateVariablesParameters.SetQuoteAlternativeId(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetQuoteAlternativeId(Integer quoteAlternativeId)
@@ -610,7 +610,7 @@ items:
   nameWithType: NSTemplateVariablesParameters.SetQuoteLineId(Integer)
   fullName: CRMScript.NetServer.NSTemplateVariablesParameters.SetQuoteLineId(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetQuoteLineId(Integer quoteLineId)
@@ -632,7 +632,7 @@ items:
   nameWithType: NSTemplateVariablesParameters.SetSaleId(Integer)
   fullName: CRMScript.NetServer.NSTemplateVariablesParameters.SetSaleId(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetSaleId(Integer saleId)
@@ -654,7 +654,7 @@ items:
   nameWithType: NSTemplateVariablesParameters.SetSelectionId(Integer)
   fullName: CRMScript.NetServer.NSTemplateVariablesParameters.SetSelectionId(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetSelectionId(Integer selectionId)
@@ -676,7 +676,7 @@ items:
   nameWithType: NSTemplateVariablesParameters.SetSourceInput(String)
   fullName: CRMScript.NetServer.NSTemplateVariablesParameters.SetSourceInput(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetSourceInput(String sourceInput)
