--- a/docs/api-reference/CRMScript.NetServer.NSTemporaryKeyInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTemporaryKeyInfo.yml
@@ -19,7 +19,7 @@ items:
   nameWithType: NSTemporaryKeyInfo
   fullName: CRMScript.NetServer.NSTemporaryKeyInfo
   type: Class
-  summary: 
+  summary: "\nThe fields returned when checking a temporary key.\n"
   example: 
 - uid: CRMScript.NetServer.NSTemporaryKeyInfo.#ctor
   commentId: M:CRMScript.NetServer.NSTemporaryKeyInfo.#ctor
@@ -31,7 +31,7 @@ items:
   nameWithType: NSTemporaryKeyInfo.#ctor
   fullName: CRMScript.NetServer.NSTemporaryKeyInfo.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSTemporaryKeyInfo class.\n"
   remarks: 
   syntax: 
     content: NSTemporaryKeyInfo
@@ -66,7 +66,7 @@ items:
   nameWithType: NSTemporaryKeyInfo.GetIsExpired()
   fullName: CRMScript.NetServer.NSTemporaryKeyInfo.GetIsExpired()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Bool GetIsExpired()
@@ -86,7 +86,7 @@ items:
   nameWithType: NSTemporaryKeyInfo.GetPersonId()
   fullName: CRMScript.NetServer.NSTemporaryKeyInfo.GetPersonId()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetPersonId()
@@ -106,7 +106,7 @@ items:
   nameWithType: NSTemporaryKeyInfo.GetTargetId()
   fullName: CRMScript.NetServer.NSTemporaryKeyInfo.GetTargetId()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetTargetId()
@@ -126,7 +126,7 @@ items:
   nameWithType: NSTemporaryKeyInfo.SetDomain(Integer)
   fullName: CRMScript.NetServer.NSTemporaryKeyInfo.SetDomain(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetDomain(Integer domain)
@@ -148,7 +148,7 @@ items:
   nameWithType: NSTemporaryKeyInfo.SetIsExpired(Bool)
   fullName: CRMScript.NetServer.NSTemporaryKeyInfo.SetIsExpired(Bool)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetIsExpired(Bool isExpired)
@@ -170,7 +170,7 @@ items:
   nameWithType: NSTemporaryKeyInfo.SetPersonId(Integer)
   fullName: CRMScript.NetServer.NSTemporaryKeyInfo.SetPersonId(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetPersonId(Integer personId)
@@ -192,7 +192,7 @@ items:
   nameWithType: NSTemporaryKeyInfo.SetTargetId(Integer)
   fullName: CRMScript.NetServer.NSTemporaryKeyInfo.SetTargetId(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetTargetId(Integer targetId)
