--- a/docs/api-reference/CRMScript.NetServer.NSTicketCategoryEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTicketCategoryEntity.yml
@@ -41,7 +41,7 @@ items:
   nameWithType: NSTicketCategoryEntity
   fullName: CRMScript.NetServer.NSTicketCategoryEntity
   type: Class
-  summary: 
+  summary: "\nDescribes the meta data for a ticket category, and provides special operations on it.\n"
   example: 
 - uid: CRMScript.NetServer.NSTicketCategoryEntity.#ctor
   commentId: M:CRMScript.NetServer.NSTicketCategoryEntity.#ctor
@@ -53,7 +53,7 @@ items:
   nameWithType: NSTicketCategoryEntity.#ctor
   fullName: CRMScript.NetServer.NSTicketCategoryEntity.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSTicketCategoryEntity class.\n"
   remarks: 
   syntax: 
     content: NSTicketCategoryEntity
@@ -68,7 +68,7 @@ items:
   nameWithType: NSTicketCategoryEntity.GetAssignmentLag()
   fullName: CRMScript.NetServer.NSTicketCategoryEntity.GetAssignmentLag()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetAssignmentLag()
@@ -88,7 +88,7 @@ items:
   nameWithType: NSTicketCategoryEntity.GetCategoryMaster()
   fullName: CRMScript.NetServer.NSTicketCategoryEntity.GetCategoryMaster()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetCategoryMaster()
@@ -168,7 +168,7 @@ items:
   nameWithType: NSTicketCategoryEntity.GetExternalName()
   fullName: CRMScript.NetServer.NSTicketCategoryEntity.GetExternalName()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetExternalName()
@@ -228,7 +228,7 @@ items:
   nameWithType: NSTicketCategoryEntity.GetFullname()
   fullName: CRMScript.NetServer.NSTicketCategoryEntity.GetFullname()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetFullname()
@@ -268,7 +268,7 @@ items:
   nameWithType: NSTicketCategoryEntity.GetName()
   fullName: CRMScript.NetServer.NSTicketCategoryEntity.GetName()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetName()
@@ -288,7 +288,7 @@ items:
   nameWithType: NSTicketCategoryEntity.GetNotificationEmail()
   fullName: CRMScript.NetServer.NSTicketCategoryEntity.GetNotificationEmail()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetNotificationEmail()
@@ -308,7 +308,7 @@ items:
   nameWithType: NSTicketCategoryEntity.GetParentId()
   fullName: CRMScript.NetServer.NSTicketCategoryEntity.GetParentId()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetParentId()
@@ -328,7 +328,7 @@ items:
   nameWithType: NSTicketCategoryEntity.GetReplyTemplate()
   fullName: CRMScript.NetServer.NSTicketCategoryEntity.GetReplyTemplate()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetReplyTemplate()
@@ -348,7 +348,7 @@ items:
   nameWithType: NSTicketCategoryEntity.GetTicketCategoryId()
   fullName: CRMScript.NetServer.NSTicketCategoryEntity.GetTicketCategoryId()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetTicketCategoryId()
@@ -368,7 +368,7 @@ items:
   nameWithType: NSTicketCategoryEntity.SetAssignmentLag(Integer)
   fullName: CRMScript.NetServer.NSTicketCategoryEntity.SetAssignmentLag(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetAssignmentLag(Integer assignmentLag)
@@ -390,7 +390,7 @@ items:
   nameWithType: NSTicketCategoryEntity.SetCategoryMaster(Integer)
   fullName: CRMScript.NetServer.NSTicketCategoryEntity.SetCategoryMaster(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetCategoryMaster(Integer categoryMaster)
@@ -412,7 +412,7 @@ items:
   nameWithType: NSTicketCategoryEntity.SetClosingStatus(Integer)
   fullName: CRMScript.NetServer.NSTicketCategoryEntity.SetClosingStatus(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetClosingStatus(Integer closingStatus)
@@ -454,7 +454,7 @@ items:
   nameWithType: NSTicketCategoryEntity.SetDelegateMethod(Integer)
   fullName: CRMScript.NetServer.NSTicketCategoryEntity.SetDelegateMethod(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetDelegateMethod(Integer delegateMethod)
@@ -476,7 +476,7 @@ items:
   nameWithType: NSTicketCategoryEntity.SetExternalName(String)
   fullName: CRMScript.NetServer.NSTicketCategoryEntity.SetExternalName(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetExternalName(String externalName)
@@ -518,7 +518,7 @@ items:
   nameWithType: NSTicketCategoryEntity.SetFlags(Integer)
   fullName: CRMScript.NetServer.NSTicketCategoryEntity.SetFlags(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetFlags(Integer flags)
@@ -540,7 +540,7 @@ items:
   nameWithType: NSTicketCategoryEntity.SetFullname(String)
   fullName: CRMScript.NetServer.NSTicketCategoryEntity.SetFullname(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetFullname(String fullname)
@@ -562,7 +562,7 @@ items:
   nameWithType: NSTicketCategoryEntity.SetMsgClosingStatus(Integer)
   fullName: CRMScript.NetServer.NSTicketCategoryEntity.SetMsgClosingStatus(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetMsgClosingStatus(Integer msgClosingStatus)
@@ -584,7 +584,7 @@ items:
   nameWithType: NSTicketCategoryEntity.SetName(String)
   fullName: CRMScript.NetServer.NSTicketCategoryEntity.SetName(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetName(String name)
@@ -606,7 +606,7 @@ items:
   nameWithType: NSTicketCategoryEntity.SetNotificationEmail(String)
   fullName: CRMScript.NetServer.NSTicketCategoryEntity.SetNotificationEmail(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetNotificationEmail(String notificationEmail)
@@ -628,7 +628,7 @@ items:
   nameWithType: NSTicketCategoryEntity.SetParentId(Integer)
   fullName: CRMScript.NetServer.NSTicketCategoryEntity.SetParentId(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetParentId(Integer parentId)
@@ -650,7 +650,7 @@ items:
   nameWithType: NSTicketCategoryEntity.SetReplyTemplate(Integer)
   fullName: CRMScript.NetServer.NSTicketCategoryEntity.SetReplyTemplate(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetReplyTemplate(Integer replyTemplate)
@@ -672,7 +672,7 @@ items:
   nameWithType: NSTicketCategoryEntity.SetTicketCategoryId(Integer)
   fullName: CRMScript.NetServer.NSTicketCategoryEntity.SetTicketCategoryId(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetTicketCategoryId(Integer ticketCategoryId)
