--- a/docs/api-reference/CRMScript.NetServer.NSTicketEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTicketEntity.yml
@@ -99,7 +99,7 @@ items:
   nameWithType: NSTicketEntity
   fullName: CRMScript.NetServer.NSTicketEntity
   type: Class
-  summary: 
+  summary: "\nRepresents a service ticket.\n"
   example: 
 - uid: CRMScript.NetServer.NSTicketEntity.#ctor
   commentId: M:CRMScript.NetServer.NSTicketEntity.#ctor
@@ -111,7 +111,7 @@ items:
   nameWithType: NSTicketEntity.#ctor
   fullName: CRMScript.NetServer.NSTicketEntity.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSTicketEntity class.\n"
   remarks: 
   syntax: 
     content: NSTicketEntity
@@ -206,7 +206,7 @@ items:
   nameWithType: NSTicketEntity.GetBaseStatus()
   fullName: CRMScript.NetServer.NSTicketEntity.GetBaseStatus()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: ""
   syntax: 
     content: Integer GetBaseStatus()
