--- a/docs/api-reference/CRMScript.NetServer.NSTicketInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTicketInfo.yml
@@ -27,7 +27,7 @@ items:
   nameWithType: NSTicketInfo
   fullName: CRMScript.NetServer.NSTicketInfo
   type: Class
-  summary: 
+  summary: "\nA small carrier that contains information about a ticket.\n"
   example: 
 - uid: CRMScript.NetServer.NSTicketInfo.#ctor
   commentId: M:CRMScript.NetServer.NSTicketInfo.#ctor
@@ -39,7 +39,7 @@ items:
   nameWithType: NSTicketInfo.#ctor
   fullName: CRMScript.NetServer.NSTicketInfo.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSTicketInfo class.\n"
   remarks: 
   syntax: 
     content: NSTicketInfo
@@ -54,7 +54,7 @@ items:
   nameWithType: NSTicketInfo.GetCategoryName()
   fullName: CRMScript.NetServer.NSTicketInfo.GetCategoryName()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetCategoryName()
@@ -74,7 +74,7 @@ items:
   nameWithType: NSTicketInfo.GetContactName()
   fullName: CRMScript.NetServer.NSTicketInfo.GetContactName()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetContactName()
@@ -94,7 +94,7 @@ items:
   nameWithType: NSTicketInfo.GetOwnerName()
   fullName: CRMScript.NetServer.NSTicketInfo.GetOwnerName()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetOwnerName()
@@ -114,7 +114,7 @@ items:
   nameWithType: NSTicketInfo.GetPersonName()
   fullName: CRMScript.NetServer.NSTicketInfo.GetPersonName()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetPersonName()
@@ -134,7 +134,7 @@ items:
   nameWithType: NSTicketInfo.GetPriorityName()
   fullName: CRMScript.NetServer.NSTicketInfo.GetPriorityName()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetPriorityName()
@@ -154,7 +154,7 @@ items:
   nameWithType: NSTicketInfo.GetTicketId()
   fullName: CRMScript.NetServer.NSTicketInfo.GetTicketId()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetTicketId()
@@ -174,7 +174,7 @@ items:
   nameWithType: NSTicketInfo.GetTicketUrl()
   fullName: CRMScript.NetServer.NSTicketInfo.GetTicketUrl()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetTicketUrl()
@@ -194,7 +194,7 @@ items:
   nameWithType: NSTicketInfo.GetTitle()
   fullName: CRMScript.NetServer.NSTicketInfo.GetTitle()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetTitle()
@@ -214,7 +214,7 @@ items:
   nameWithType: NSTicketInfo.SetCategoryName(String)
   fullName: CRMScript.NetServer.NSTicketInfo.SetCategoryName(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetCategoryName(String categoryName)
@@ -236,7 +236,7 @@ items:
   nameWithType: NSTicketInfo.SetContactName(String)
   fullName: CRMScript.NetServer.NSTicketInfo.SetContactName(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetContactName(String contactName)
@@ -258,7 +258,7 @@ items:
   nameWithType: NSTicketInfo.SetOwnerName(String)
   fullName: CRMScript.NetServer.NSTicketInfo.SetOwnerName(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetOwnerName(String ownerName)
@@ -280,7 +280,7 @@ items:
   nameWithType: NSTicketInfo.SetPersonName(String)
   fullName: CRMScript.NetServer.NSTicketInfo.SetPersonName(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetPersonName(String personName)
@@ -302,7 +302,7 @@ items:
   nameWithType: NSTicketInfo.SetPriorityName(String)
   fullName: CRMScript.NetServer.NSTicketInfo.SetPriorityName(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetPriorityName(String priorityName)
@@ -324,7 +324,7 @@ items:
   nameWithType: NSTicketInfo.SetTicketId(Integer)
   fullName: CRMScript.NetServer.NSTicketInfo.SetTicketId(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetTicketId(Integer ticketId)
@@ -346,7 +346,7 @@ items:
   nameWithType: NSTicketInfo.SetTicketUrl(String)
   fullName: CRMScript.NetServer.NSTicketInfo.SetTicketUrl(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetTicketUrl(String ticketUrl)
@@ -368,7 +368,7 @@ items:
   nameWithType: NSTicketInfo.SetTitle(String)
   fullName: CRMScript.NetServer.NSTicketInfo.SetTitle(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetTitle(String title)
