--- a/docs/api-reference/CRMScript.NetServer.NSTicketMessage.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTicketMessage.yml
@@ -35,7 +35,7 @@ items:
   nameWithType: NSTicketMessage
   fullName: CRMScript.NetServer.NSTicketMessage
   type: Class
-  summary: 
+  summary: "\nThe TicketMessage carrier is used for representing a service ticket message.\n"
   example: 
 - uid: CRMScript.NetServer.NSTicketMessage.#ctor
   commentId: M:CRMScript.NetServer.NSTicketMessage.#ctor
@@ -47,7 +47,7 @@ items:
   nameWithType: NSTicketMessage.#ctor
   fullName: CRMScript.NetServer.NSTicketMessage.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSTicketMessage class.\n"
   remarks: 
   syntax: 
     content: NSTicketMessage
@@ -62,7 +62,7 @@ items:
   nameWithType: NSTicketMessage.GetAuthor()
   fullName: CRMScript.NetServer.NSTicketMessage.GetAuthor()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetAuthor()
@@ -102,7 +102,7 @@ items:
   nameWithType: NSTicketMessage.GetContactId()
   fullName: CRMScript.NetServer.NSTicketMessage.GetContactId()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetContactId()
@@ -122,7 +122,7 @@ items:
   nameWithType: NSTicketMessage.GetContactName()
   fullName: CRMScript.NetServer.NSTicketMessage.GetContactName()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetContactName()
@@ -142,7 +142,7 @@ items:
   nameWithType: NSTicketMessage.GetCreatedAt()
   fullName: CRMScript.NetServer.NSTicketMessage.GetCreatedAt()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: DateTime GetCreatedAt()
@@ -162,7 +162,7 @@ items:
   nameWithType: NSTicketMessage.GetEmailHeader()
   fullName: CRMScript.NetServer.NSTicketMessage.GetEmailHeader()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetEmailHeader()
@@ -182,7 +182,7 @@ items:
   nameWithType: NSTicketMessage.GetImportant()
   fullName: CRMScript.NetServer.NSTicketMessage.GetImportant()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Bool GetImportant()
@@ -202,7 +202,7 @@ items:
   nameWithType: NSTicketMessage.GetNumAttachments()
   fullName: CRMScript.NetServer.NSTicketMessage.GetNumAttachments()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetNumAttachments()
@@ -222,7 +222,7 @@ items:
   nameWithType: NSTicketMessage.GetPersonFullName()
   fullName: CRMScript.NetServer.NSTicketMessage.GetPersonFullName()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetPersonFullName()
@@ -242,7 +242,7 @@ items:
   nameWithType: NSTicketMessage.GetPersonId()
   fullName: CRMScript.NetServer.NSTicketMessage.GetPersonId()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetPersonId()
@@ -282,7 +282,7 @@ items:
   nameWithType: NSTicketMessage.GetTicketMessageId()
   fullName: CRMScript.NetServer.NSTicketMessage.GetTicketMessageId()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetTicketMessageId()
@@ -302,7 +302,7 @@ items:
   nameWithType: NSTicketMessage.SetAuthor(String)
   fullName: CRMScript.NetServer.NSTicketMessage.SetAuthor(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetAuthor(String author)
@@ -324,7 +324,7 @@ items:
   nameWithType: NSTicketMessage.SetContactDepartment(String)
   fullName: CRMScript.NetServer.NSTicketMessage.SetContactDepartment(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetContactDepartment(String contactDepartment)
@@ -346,7 +346,7 @@ items:
   nameWithType: NSTicketMessage.SetContactId(Integer)
   fullName: CRMScript.NetServer.NSTicketMessage.SetContactId(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetContactId(Integer contactId)
@@ -368,7 +368,7 @@ items:
   nameWithType: NSTicketMessage.SetContactName(String)
   fullName: CRMScript.NetServer.NSTicketMessage.SetContactName(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetContactName(String contactName)
@@ -390,7 +390,7 @@ items:
   nameWithType: NSTicketMessage.SetCreatedAt(DateTime)
   fullName: CRMScript.NetServer.NSTicketMessage.SetCreatedAt(DateTime)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetCreatedAt(DateTime createdAt)
@@ -412,7 +412,7 @@ items:
   nameWithType: NSTicketMessage.SetEmailHeader(String)
   fullName: CRMScript.NetServer.NSTicketMessage.SetEmailHeader(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetEmailHeader(String emailHeader)
@@ -434,7 +434,7 @@ items:
   nameWithType: NSTicketMessage.SetImportant(Bool)
   fullName: CRMScript.NetServer.NSTicketMessage.SetImportant(Bool)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetImportant(Bool important)
@@ -456,7 +456,7 @@ items:
   nameWithType: NSTicketMessage.SetNumAttachments(Integer)
   fullName: CRMScript.NetServer.NSTicketMessage.SetNumAttachments(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetNumAttachments(Integer numAttachments)
@@ -500,7 +500,7 @@ items:
   nameWithType: NSTicketMessage.SetPersonId(Integer)
   fullName: CRMScript.NetServer.NSTicketMessage.SetPersonId(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetPersonId(Integer personId)
@@ -522,7 +522,7 @@ items:
   nameWithType: NSTicketMessage.SetSlevel(Integer)
   fullName: CRMScript.NetServer.NSTicketMessage.SetSlevel(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetSlevel(Integer slevel)
@@ -544,7 +544,7 @@ items:
   nameWithType: NSTicketMessage.SetTicketMessageId(Integer)
   fullName: CRMScript.NetServer.NSTicketMessage.SetTicketMessageId(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetTicketMessageId(Integer ticketMessageId)
