--- a/docs/api-reference/CRMScript.NetServer.NSTicketMessageEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTicketMessageEntity.yml
@@ -53,7 +53,7 @@ items:
   nameWithType: NSTicketMessageEntity
   fullName: CRMScript.NetServer.NSTicketMessageEntity
   type: Class
-  summary: 
+  summary: "\nThe ticket messages are e-mails, SMS or other messages attached to a ticket (aka request).\n"
   example: 
 - uid: CRMScript.NetServer.NSTicketMessageEntity.GetAuthor()
   commentId: M:CRMScript.NetServer.NSTicketMessageEntity.GetAuthor()
@@ -482,7 +482,7 @@ items:
   nameWithType: NSTicketMessageEntity.#ctor
   fullName: CRMScript.NetServer.NSTicketMessageEntity.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSTicketMessageEntity class.\n"
   remarks: 
   syntax: 
     content: NSTicketMessageEntity
