--- a/docs/api-reference/CRMScript.NetServer.NSTicketMessageHeader.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTicketMessageHeader.yml
@@ -27,7 +27,7 @@ items:
   nameWithType: NSTicketMessageHeader.#ctor
   fullName: CRMScript.NetServer.NSTicketMessageHeader.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSTicketMessageHeader class.\n"
   remarks: 
   syntax: 
     content: NSTicketMessageHeader
