--- a/docs/api-reference/CRMScript.NetServer.NSTicketPriority.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTicketPriority.yml
@@ -17,7 +17,7 @@ items:
   nameWithType: NSTicketPriority
   fullName: CRMScript.NetServer.NSTicketPriority
   type: Class
-  summary: 
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSTicketPriority.#ctor
   commentId: M:CRMScript.NetServer.NSTicketPriority.#ctor
@@ -29,7 +29,7 @@ items:
   nameWithType: NSTicketPriority.#ctor
   fullName: CRMScript.NetServer.NSTicketPriority.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSTicketPriority class.\n"
   remarks: 
   syntax: 
     content: NSTicketPriority
