--- a/docs/api-reference/CRMScript.NetServer.NSTicketStatusEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTicketStatusEntity.yml
@@ -21,7 +21,7 @@ items:
   nameWithType: NSTicketStatusEntity
   fullName: CRMScript.NetServer.NSTicketStatusEntity
   type: Class
-  summary: 
+  summary: "\nEntity for a ticket status. This entity describes the meta data for a ticket status, and provides special operations on it.\n"
   example: 
 - uid: CRMScript.NetServer.NSTicketStatusEntity.#ctor
   commentId: M:CRMScript.NetServer.NSTicketStatusEntity.#ctor
@@ -33,7 +33,7 @@ items:
   nameWithType: NSTicketStatusEntity.#ctor
   fullName: CRMScript.NetServer.NSTicketStatusEntity.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSTicketStatusEntity class.\n"
   remarks: 
   syntax: 
     content: NSTicketStatusEntity
@@ -48,7 +48,7 @@ items:
   nameWithType: NSTicketStatusEntity.GetName()
   fullName: CRMScript.NetServer.NSTicketStatusEntity.GetName()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetName()
@@ -68,7 +68,7 @@ items:
   nameWithType: NSTicketStatusEntity.GetNoEmailReopen()
   fullName: CRMScript.NetServer.NSTicketStatusEntity.GetNoEmailReopen()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Bool GetNoEmailReopen()
@@ -108,7 +108,7 @@ items:
   nameWithType: NSTicketStatusEntity.GetTicketStatusId()
   fullName: CRMScript.NetServer.NSTicketStatusEntity.GetTicketStatusId()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetTicketStatusId()
@@ -148,7 +148,7 @@ items:
   nameWithType: NSTicketStatusEntity.SetName(String)
   fullName: CRMScript.NetServer.NSTicketStatusEntity.SetName(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetName(String name)
@@ -170,7 +170,7 @@ items:
   nameWithType: NSTicketStatusEntity.SetNoEmailReopen(Bool)
   fullName: CRMScript.NetServer.NSTicketStatusEntity.SetNoEmailReopen(Bool)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetNoEmailReopen(Bool noEmailReopen)
@@ -192,7 +192,7 @@ items:
   nameWithType: NSTicketStatusEntity.SetStatus(Integer)
   fullName: CRMScript.NetServer.NSTicketStatusEntity.SetStatus(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetStatus(Integer status)
@@ -214,7 +214,7 @@ items:
   nameWithType: NSTicketStatusEntity.SetTicketStatusId(Integer)
   fullName: CRMScript.NetServer.NSTicketStatusEntity.SetTicketStatusId(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetTicketStatusId(Integer ticketStatusId)
@@ -236,7 +236,7 @@ items:
   nameWithType: NSTicketStatusEntity.SetTimeCounter(Integer)
   fullName: CRMScript.NetServer.NSTicketStatusEntity.SetTimeCounter(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetTimeCounter(Integer timeCounter)
