--- a/docs/api-reference/CRMScript.NetServer.NSTicketSummaryItem.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTicketSummaryItem.yml
@@ -19,7 +19,7 @@ items:
   nameWithType: NSTicketSummaryItem
   fullName: CRMScript.NetServer.NSTicketSummaryItem
   type: Class
-  summary: 
+  summary: "\nThe ticket summary with heading, created date.\n"
   example: 
 - uid: CRMScript.NetServer.NSTicketSummaryItem.#ctor
   commentId: M:CRMScript.NetServer.NSTicketSummaryItem.#ctor
@@ -31,7 +31,7 @@ items:
   nameWithType: NSTicketSummaryItem.#ctor
   fullName: CRMScript.NetServer.NSTicketSummaryItem.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSTicketSummaryItem class.\n"
   remarks: 
   syntax: 
     content: NSTicketSummaryItem
@@ -46,7 +46,7 @@ items:
   nameWithType: NSTicketSummaryItem.GetRegistered()
   fullName: CRMScript.NetServer.NSTicketSummaryItem.GetRegistered()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: DateTime GetRegistered()
@@ -66,7 +66,7 @@ items:
   nameWithType: NSTicketSummaryItem.GetTicketId()
   fullName: CRMScript.NetServer.NSTicketSummaryItem.GetTicketId()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetTicketId()
@@ -86,7 +86,7 @@ items:
   nameWithType: NSTicketSummaryItem.GetTicketStatus()
   fullName: CRMScript.NetServer.NSTicketSummaryItem.GetTicketStatus()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetTicketStatus()
@@ -106,7 +106,7 @@ items:
   nameWithType: NSTicketSummaryItem.GetTitle()
   fullName: CRMScript.NetServer.NSTicketSummaryItem.GetTitle()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetTitle()
@@ -126,7 +126,7 @@ items:
   nameWithType: NSTicketSummaryItem.SetRegistered(DateTime)
   fullName: CRMScript.NetServer.NSTicketSummaryItem.SetRegistered(DateTime)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetRegistered(DateTime registered)
@@ -148,7 +148,7 @@ items:
   nameWithType: NSTicketSummaryItem.SetTicketId(Integer)
   fullName: CRMScript.NetServer.NSTicketSummaryItem.SetTicketId(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetTicketId(Integer ticketId)
@@ -170,7 +170,7 @@ items:
   nameWithType: NSTicketSummaryItem.SetTicketStatus(Integer)
   fullName: CRMScript.NetServer.NSTicketSummaryItem.SetTicketStatus(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetTicketStatus(Integer ticketStatus)
