--- a/docs/api-reference/CRMScript.NetServer.NSTimeZoneData.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTimeZoneData.yml
@@ -25,7 +25,7 @@ items:
   nameWithType: NSTimeZoneData
   fullName: CRMScript.NetServer.NSTimeZoneData
   type: Class
-  summary: 
+  summary: "\nInformation about a TimeZone.\n"
   example: 
 - uid: CRMScript.NetServer.NSTimeZoneData.#ctor
   commentId: M:CRMScript.NetServer.NSTimeZoneData.#ctor
@@ -37,7 +37,7 @@ items:
   nameWithType: NSTimeZoneData.#ctor
   fullName: CRMScript.NetServer.NSTimeZoneData.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSTimeZoneData class.\n"
   remarks: 
   syntax: 
     content: NSTimeZoneData
@@ -72,7 +72,7 @@ items:
   nameWithType: NSTimeZoneData.GetName()
   fullName: CRMScript.NetServer.NSTimeZoneData.GetName()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetName()
@@ -92,7 +92,7 @@ items:
   nameWithType: NSTimeZoneData.GetTimeZoneDSTRules()
   fullName: CRMScript.NetServer.NSTimeZoneData.GetTimeZoneDSTRules()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Map GetTimeZoneDSTRules()
@@ -112,7 +112,7 @@ items:
   nameWithType: NSTimeZoneData.GetTimeZoneSTDRules()
   fullName: CRMScript.NetServer.NSTimeZoneData.GetTimeZoneSTDRules()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Map GetTimeZoneSTDRules()
@@ -132,7 +132,7 @@ items:
   nameWithType: NSTimeZoneData.GetTZLocationCities()
   fullName: CRMScript.NetServer.NSTimeZoneData.GetTZLocationCities()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetTZLocationCities()
@@ -152,7 +152,7 @@ items:
   nameWithType: NSTimeZoneData.GetTZLocationCode()
   fullName: CRMScript.NetServer.NSTimeZoneData.GetTZLocationCode()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetTZLocationCode()
@@ -172,7 +172,7 @@ items:
   nameWithType: NSTimeZoneData.GetTZLocationID()
   fullName: CRMScript.NetServer.NSTimeZoneData.GetTZLocationID()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetTZLocationID()
@@ -192,7 +192,7 @@ items:
   nameWithType: NSTimeZoneData.SetIsoNumber(Integer)
   fullName: CRMScript.NetServer.NSTimeZoneData.SetIsoNumber(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetIsoNumber(Integer isoNumber)
@@ -214,7 +214,7 @@ items:
   nameWithType: NSTimeZoneData.SetName(String)
   fullName: CRMScript.NetServer.NSTimeZoneData.SetName(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetName(String name)
@@ -236,7 +236,7 @@ items:
   nameWithType: NSTimeZoneData.SetTimeZoneDSTRules(Map)
   fullName: CRMScript.NetServer.NSTimeZoneData.SetTimeZoneDSTRules(Map)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetTimeZoneDSTRules(Map timeZoneDSTRules)
@@ -280,7 +280,7 @@ items:
   nameWithType: NSTimeZoneData.SetTZLocationCities(String)
   fullName: CRMScript.NetServer.NSTimeZoneData.SetTZLocationCities(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetTZLocationCities(String tZLocationCities)
@@ -302,7 +302,7 @@ items:
   nameWithType: NSTimeZoneData.SetTZLocationCode(String)
   fullName: CRMScript.NetServer.NSTimeZoneData.SetTZLocationCode(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetTZLocationCode(String tZLocationCode)
@@ -324,7 +324,7 @@ items:
   nameWithType: NSTimeZoneData.SetTZLocationID(Integer)
   fullName: CRMScript.NetServer.NSTimeZoneData.SetTZLocationID(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetTZLocationID(Integer tZLocationID)
