--- a/docs/api-reference/CRMScript.NetServer.NSTimeZoneRule.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTimeZoneRule.yml
@@ -25,7 +25,7 @@ items:
   nameWithType: NSTimeZoneRule
   fullName: CRMScript.NetServer.NSTimeZoneRule
   type: Class
-  summary: 
+  summary: "\nInformation about a rule for a TimeZone.\n"
   example: 
 - uid: CRMScript.NetServer.NSTimeZoneRule.#ctor
   commentId: M:CRMScript.NetServer.NSTimeZoneRule.#ctor
@@ -37,7 +37,7 @@ items:
   nameWithType: NSTimeZoneRule.#ctor
   fullName: CRMScript.NetServer.NSTimeZoneRule.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSTimeZoneRule class.\n"
   remarks: 
   syntax: 
     content: NSTimeZoneRule
@@ -52,7 +52,7 @@ items:
   nameWithType: NSTimeZoneRule.GetEndDay()
   fullName: CRMScript.NetServer.NSTimeZoneRule.GetEndDay()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetEndDay()
@@ -72,7 +72,7 @@ items:
   nameWithType: NSTimeZoneRule.GetEndMonth()
   fullName: CRMScript.NetServer.NSTimeZoneRule.GetEndMonth()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetEndMonth()
@@ -92,7 +92,7 @@ items:
   nameWithType: NSTimeZoneRule.GetEndRulePattern()
   fullName: CRMScript.NetServer.NSTimeZoneRule.GetEndRulePattern()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetEndRulePattern()
@@ -112,7 +112,7 @@ items:
   nameWithType: NSTimeZoneRule.GetStartDay()
   fullName: CRMScript.NetServer.NSTimeZoneRule.GetStartDay()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetStartDay()
@@ -132,7 +132,7 @@ items:
   nameWithType: NSTimeZoneRule.GetStartMonth()
   fullName: CRMScript.NetServer.NSTimeZoneRule.GetStartMonth()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetStartMonth()
@@ -152,7 +152,7 @@ items:
   nameWithType: NSTimeZoneRule.GetStartRulePattern()
   fullName: CRMScript.NetServer.NSTimeZoneRule.GetStartRulePattern()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetStartRulePattern()
@@ -172,7 +172,7 @@ items:
   nameWithType: NSTimeZoneRule.GetTZOffset()
   fullName: CRMScript.NetServer.NSTimeZoneRule.GetTZOffset()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetTZOffset()
@@ -192,7 +192,7 @@ items:
   nameWithType: NSTimeZoneRule.SetEndDay(Integer)
   fullName: CRMScript.NetServer.NSTimeZoneRule.SetEndDay(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetEndDay(Integer endDay)
@@ -214,7 +214,7 @@ items:
   nameWithType: NSTimeZoneRule.SetEndMonth(Integer)
   fullName: CRMScript.NetServer.NSTimeZoneRule.SetEndMonth(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetEndMonth(Integer endMonth)
@@ -236,7 +236,7 @@ items:
   nameWithType: NSTimeZoneRule.SetEndRulePattern(String)
   fullName: CRMScript.NetServer.NSTimeZoneRule.SetEndRulePattern(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetEndRulePattern(String endRulePattern)
@@ -258,7 +258,7 @@ items:
   nameWithType: NSTimeZoneRule.SetStartDay(Integer)
   fullName: CRMScript.NetServer.NSTimeZoneRule.SetStartDay(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetStartDay(Integer startDay)
@@ -280,7 +280,7 @@ items:
   nameWithType: NSTimeZoneRule.SetStartMonth(Integer)
   fullName: CRMScript.NetServer.NSTimeZoneRule.SetStartMonth(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetStartMonth(Integer startMonth)
@@ -302,7 +302,7 @@ items:
   nameWithType: NSTimeZoneRule.SetStartRulePattern(String)
   fullName: CRMScript.NetServer.NSTimeZoneRule.SetStartRulePattern(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetStartRulePattern(String startRulePattern)
@@ -324,7 +324,7 @@ items:
   nameWithType: NSTimeZoneRule.SetTZOffset(Integer)
   fullName: CRMScript.NetServer.NSTimeZoneRule.SetTZOffset(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetTZOffset(Integer tZOffset)
