--- a/docs/api-reference/CRMScript.NetServer.NSTokenManagementInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTokenManagementInfo.yml
@@ -17,7 +17,7 @@ items:
   nameWithType: NSTokenManagementInfo
   fullName: CRMScript.NetServer.NSTokenManagementInfo
   type: Class
-  summary: 
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSTokenManagementInfo.#ctor
   commentId: M:CRMScript.NetServer.NSTokenManagementInfo.#ctor
@@ -29,7 +29,7 @@ items:
   nameWithType: NSTokenManagementInfo.#ctor
   fullName: CRMScript.NetServer.NSTokenManagementInfo.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSTokenManagementInfo class.\n"
   remarks: 
   syntax: 
     content: NSTokenManagementInfo
@@ -44,7 +44,7 @@ items:
   nameWithType: NSTokenManagementInfo.GetAccessToken()
   fullName: CRMScript.NetServer.NSTokenManagementInfo.GetAccessToken()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetAccessToken()
@@ -64,7 +64,7 @@ items:
   nameWithType: NSTokenManagementInfo.GetProvider()
   fullName: CRMScript.NetServer.NSTokenManagementInfo.GetProvider()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetProvider()
@@ -84,7 +84,7 @@ items:
   nameWithType: NSTokenManagementInfo.GetRefreshToken()
   fullName: CRMScript.NetServer.NSTokenManagementInfo.GetRefreshToken()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetRefreshToken()
@@ -104,7 +104,7 @@ items:
   nameWithType: NSTokenManagementInfo.SetAccessToken(String)
   fullName: CRMScript.NetServer.NSTokenManagementInfo.SetAccessToken(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetAccessToken(String accessToken)
@@ -126,7 +126,7 @@ items:
   nameWithType: NSTokenManagementInfo.SetProvider(String)
   fullName: CRMScript.NetServer.NSTokenManagementInfo.SetProvider(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetProvider(String provider)
@@ -148,7 +148,7 @@ items:
   nameWithType: NSTokenManagementInfo.SetRefreshToken(String)
   fullName: CRMScript.NetServer.NSTokenManagementInfo.SetRefreshToken(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetRefreshToken(String refreshToken)
