--- a/docs/api-reference/CRMScript.NetServer.NSTypicalSearch.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTypicalSearch.yml
@@ -29,7 +29,7 @@ items:
   nameWithType: NSTypicalSearch
   fullName: CRMScript.NetServer.NSTypicalSearch
   type: Class
-  summary: 
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSTypicalSearch.#ctor
   commentId: M:CRMScript.NetServer.NSTypicalSearch.#ctor
@@ -41,7 +41,7 @@ items:
   nameWithType: NSTypicalSearch.#ctor
   fullName: CRMScript.NetServer.NSTypicalSearch.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSTypicalSearch class.\n"
   remarks: 
   syntax: 
     content: NSTypicalSearch
@@ -56,7 +56,7 @@ items:
   nameWithType: NSTypicalSearch.GetEntityName()
   fullName: CRMScript.NetServer.NSTypicalSearch.GetEntityName()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetEntityName()
@@ -76,7 +76,7 @@ items:
   nameWithType: NSTypicalSearch.GetIncludePerson()
   fullName: CRMScript.NetServer.NSTypicalSearch.GetIncludePerson()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetIncludePerson()
@@ -156,7 +156,7 @@ items:
   nameWithType: NSTypicalSearch.GetTitle()
   fullName: CRMScript.NetServer.NSTypicalSearch.GetTitle()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetTitle()
@@ -176,7 +176,7 @@ items:
   nameWithType: NSTypicalSearch.GetTooltip()
   fullName: CRMScript.NetServer.NSTypicalSearch.GetTooltip()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetTooltip()
@@ -196,7 +196,7 @@ items:
   nameWithType: NSTypicalSearch.GetTypicalSearchId()
   fullName: CRMScript.NetServer.NSTypicalSearch.GetTypicalSearchId()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetTypicalSearchId()
@@ -216,7 +216,7 @@ items:
   nameWithType: NSTypicalSearch.GetVersionNumber()
   fullName: CRMScript.NetServer.NSTypicalSearch.GetVersionNumber()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetVersionNumber()
@@ -236,7 +236,7 @@ items:
   nameWithType: NSTypicalSearch.SetEntityName(String)
   fullName: CRMScript.NetServer.NSTypicalSearch.SetEntityName(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetEntityName(String entityName)
@@ -258,7 +258,7 @@ items:
   nameWithType: NSTypicalSearch.SetIncludePerson(Integer)
   fullName: CRMScript.NetServer.NSTypicalSearch.SetIncludePerson(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetIncludePerson(Integer includePerson)
@@ -280,7 +280,7 @@ items:
   nameWithType: NSTypicalSearch.SetIsEntityDefault(Integer)
   fullName: CRMScript.NetServer.NSTypicalSearch.SetIsEntityDefault(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetIsEntityDefault(Integer isEntityDefault)
@@ -302,7 +302,7 @@ items:
   nameWithType: NSTypicalSearch.SetRestrictionGroups(NSArchiveRestrictionGroup[])
   fullName: CRMScript.NetServer.NSTypicalSearch.SetRestrictionGroups(NSArchiveRestrictionGroup[])
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetRestrictionGroups(NSArchiveRestrictionGroup[] restrictionGroups)
@@ -346,7 +346,7 @@ items:
   nameWithType: NSTypicalSearch.SetTitle(String)
   fullName: CRMScript.NetServer.NSTypicalSearch.SetTitle(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetTitle(String title)
@@ -368,7 +368,7 @@ items:
   nameWithType: NSTypicalSearch.SetTooltip(String)
   fullName: CRMScript.NetServer.NSTypicalSearch.SetTooltip(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetTooltip(String tooltip)
@@ -390,7 +390,7 @@ items:
   nameWithType: NSTypicalSearch.SetTypicalSearchId(Integer)
   fullName: CRMScript.NetServer.NSTypicalSearch.SetTypicalSearchId(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetTypicalSearchId(Integer typicalSearchId)
@@ -412,7 +412,7 @@ items:
   nameWithType: NSTypicalSearch.SetVersionNumber(Integer)
   fullName: CRMScript.NetServer.NSTypicalSearch.SetVersionNumber(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetVersionNumber(Integer versionNumber)
