--- a/docs/api-reference/CRMScript.NetServer.NSTypicalSearches.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTypicalSearches.yml
@@ -19,7 +19,7 @@ items:
   nameWithType: NSTypicalSearches
   fullName: CRMScript.NetServer.NSTypicalSearches
   type: Class
-  summary: 
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSTypicalSearches.#ctor
   commentId: M:CRMScript.NetServer.NSTypicalSearches.#ctor
@@ -31,7 +31,7 @@ items:
   nameWithType: NSTypicalSearches.#ctor
   fullName: CRMScript.NetServer.NSTypicalSearches.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSTypicalSearches class.\n"
   remarks: 
   syntax: 
     content: NSTypicalSearches
@@ -46,7 +46,7 @@ items:
   nameWithType: NSTypicalSearches.GetDeleteLeftovers()
   fullName: CRMScript.NetServer.NSTypicalSearches.GetDeleteLeftovers()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Bool GetDeleteLeftovers()
@@ -66,7 +66,7 @@ items:
   nameWithType: NSTypicalSearches.GetMasterVersion()
   fullName: CRMScript.NetServer.NSTypicalSearches.GetMasterVersion()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetMasterVersion()
@@ -126,7 +126,7 @@ items:
   nameWithType: NSTypicalSearches.SetDeleteLeftovers(Bool)
   fullName: CRMScript.NetServer.NSTypicalSearches.SetDeleteLeftovers(Bool)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetDeleteLeftovers(Bool deleteLeftovers)
@@ -148,7 +148,7 @@ items:
   nameWithType: NSTypicalSearches.SetMasterVersion(Integer)
   fullName: CRMScript.NetServer.NSTypicalSearches.SetMasterVersion(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetMasterVersion(Integer masterVersion)
@@ -170,7 +170,7 @@ items:
   nameWithType: NSTypicalSearches.SetSearches(NSTypicalSearch[])
   fullName: CRMScript.NetServer.NSTypicalSearches.SetSearches(NSTypicalSearch[])
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetSearches(NSTypicalSearch[] searches)
