--- a/docs/api-reference/CRMScript.NetServer.NSUntrustedCredentials.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSUntrustedCredentials.yml
@@ -23,7 +23,7 @@ items:
   nameWithType: NSUntrustedCredentials
   fullName: CRMScript.NetServer.NSUntrustedCredentials
   type: Class
-  summary: 
+  summary: "\nCredentials for external authentication.\n"
   example: 
 - uid: CRMScript.NetServer.NSUntrustedCredentials.#ctor
   commentId: M:CRMScript.NetServer.NSUntrustedCredentials.#ctor
@@ -35,7 +35,7 @@ items:
   nameWithType: NSUntrustedCredentials.#ctor
   fullName: CRMScript.NetServer.NSUntrustedCredentials.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSUntrustedCredentials class.\n"
   remarks: 
   syntax: 
     content: NSUntrustedCredentials
@@ -50,7 +50,7 @@ items:
   nameWithType: NSUntrustedCredentials.GetComment()
   fullName: CRMScript.NetServer.NSUntrustedCredentials.GetComment()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetComment()
@@ -70,7 +70,7 @@ items:
   nameWithType: NSUntrustedCredentials.GetIsActive()
   fullName: CRMScript.NetServer.NSUntrustedCredentials.GetIsActive()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Bool GetIsActive()
@@ -90,7 +90,7 @@ items:
   nameWithType: NSUntrustedCredentials.GetPublicValue()
   fullName: CRMScript.NetServer.NSUntrustedCredentials.GetPublicValue()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetPublicValue()
@@ -110,7 +110,7 @@ items:
   nameWithType: NSUntrustedCredentials.GetSecretValue()
   fullName: CRMScript.NetServer.NSUntrustedCredentials.GetSecretValue()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetSecretValue()
@@ -130,7 +130,7 @@ items:
   nameWithType: NSUntrustedCredentials.GetValidFrom()
   fullName: CRMScript.NetServer.NSUntrustedCredentials.GetValidFrom()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: DateTime GetValidFrom()
@@ -150,7 +150,7 @@ items:
   nameWithType: NSUntrustedCredentials.GetValidTo()
   fullName: CRMScript.NetServer.NSUntrustedCredentials.GetValidTo()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: DateTime GetValidTo()
@@ -170,7 +170,7 @@ items:
   nameWithType: NSUntrustedCredentials.SetComment(String)
   fullName: CRMScript.NetServer.NSUntrustedCredentials.SetComment(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetComment(String comment)
@@ -192,7 +192,7 @@ items:
   nameWithType: NSUntrustedCredentials.SetIsActive(Bool)
   fullName: CRMScript.NetServer.NSUntrustedCredentials.SetIsActive(Bool)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetIsActive(Bool isActive)
@@ -214,7 +214,7 @@ items:
   nameWithType: NSUntrustedCredentials.SetPublicValue(String)
   fullName: CRMScript.NetServer.NSUntrustedCredentials.SetPublicValue(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetPublicValue(String publicValue)
@@ -236,7 +236,7 @@ items:
   nameWithType: NSUntrustedCredentials.SetSecretValue(String)
   fullName: CRMScript.NetServer.NSUntrustedCredentials.SetSecretValue(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetSecretValue(String secretValue)
@@ -258,7 +258,7 @@ items:
   nameWithType: NSUntrustedCredentials.SetValidFrom(DateTime)
   fullName: CRMScript.NetServer.NSUntrustedCredentials.SetValidFrom(DateTime)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetValidFrom(DateTime validFrom)
