--- a/docs/api-reference/CRMScript.NetServer.NSUser.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSUser.yml
@@ -61,7 +61,7 @@ items:
   nameWithType: NSUser
   fullName: CRMScript.NetServer.NSUser
   type: Class
-  summary: 
+  summary: "\nSuperOffice User, with login credentials and an associated person.\n"
   example: 
 - uid: CRMScript.NetServer.NSUser.#ctor
   commentId: M:CRMScript.NetServer.NSUser.#ctor
@@ -73,7 +73,7 @@ items:
   nameWithType: NSUser.#ctor
   fullName: CRMScript.NetServer.NSUser.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSUser class.\n"
   remarks: 
   syntax: 
     content: NSUser
@@ -88,7 +88,7 @@ items:
   nameWithType: NSUser.GetAssociateId()
   fullName: CRMScript.NetServer.NSUser.GetAssociateId()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetAssociateId()
@@ -148,7 +148,7 @@ items:
   nameWithType: NSUser.GetDeleted()
   fullName: CRMScript.NetServer.NSUser.GetDeleted()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Bool GetDeleted()
@@ -187,7 +187,7 @@ items:
   nameWithType: NSUser.GetEjUserId()
   fullName: CRMScript.NetServer.NSUser.GetEjUserId()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetEjUserId()
@@ -227,7 +227,7 @@ items:
   nameWithType: NSUser.GetIsOnTravel()
   fullName: CRMScript.NetServer.NSUser.GetIsOnTravel()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Bool GetIsOnTravel()
@@ -247,7 +247,7 @@ items:
   nameWithType: NSUser.GetIsPersonRetired()
   fullName: CRMScript.NetServer.NSUser.GetIsPersonRetired()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Bool GetIsPersonRetired()
@@ -267,7 +267,7 @@ items:
   nameWithType: NSUser.GetLastlogin()
   fullName: CRMScript.NetServer.NSUser.GetLastlogin()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: DateTime GetLastlogin()
@@ -287,7 +287,7 @@ items:
   nameWithType: NSUser.GetLastlogout()
   fullName: CRMScript.NetServer.NSUser.GetLastlogout()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: DateTime GetLastlogout()
@@ -327,7 +327,7 @@ items:
   nameWithType: NSUser.GetName()
   fullName: CRMScript.NetServer.NSUser.GetName()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetName()
@@ -347,7 +347,7 @@ items:
   nameWithType: NSUser.GetNickName()
   fullName: CRMScript.NetServer.NSUser.GetNickName()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetNickName()
@@ -387,7 +387,7 @@ items:
   nameWithType: NSUser.GetPerson()
   fullName: CRMScript.NetServer.NSUser.GetPerson()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: NSPerson GetPerson()
@@ -407,7 +407,7 @@ items:
   nameWithType: NSUser.GetRank()
   fullName: CRMScript.NetServer.NSUser.GetRank()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetRank()
@@ -427,7 +427,7 @@ items:
   nameWithType: NSUser.GetRequestSignature()
   fullName: CRMScript.NetServer.NSUser.GetRequestSignature()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetRequestSignature()
@@ -447,7 +447,7 @@ items:
   nameWithType: NSUser.GetRole()
   fullName: CRMScript.NetServer.NSUser.GetRole()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: NSRole GetRole()
@@ -487,7 +487,7 @@ items:
   nameWithType: NSUser.GetTooltip()
   fullName: CRMScript.NetServer.NSUser.GetTooltip()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetTooltip()
@@ -527,7 +527,7 @@ items:
   nameWithType: NSUser.GetUserGroup()
   fullName: CRMScript.NetServer.NSUser.GetUserGroup()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: NSUserGroup GetUserGroup()
@@ -547,7 +547,7 @@ items:
   nameWithType: NSUser.GetUserName()
   fullName: CRMScript.NetServer.NSUser.GetUserName()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetUserName()
@@ -567,7 +567,7 @@ items:
   nameWithType: NSUser.GetWaitingForApproval()
   fullName: CRMScript.NetServer.NSUser.GetWaitingForApproval()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Bool GetWaitingForApproval()
@@ -587,7 +587,7 @@ items:
   nameWithType: NSUser.SetAssociateId(Integer)
   fullName: CRMScript.NetServer.NSUser.SetAssociateId(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetAssociateId(Integer associateId)
@@ -609,7 +609,7 @@ items:
   nameWithType: NSUser.SetCredentials(NSCredential[])
   fullName: CRMScript.NetServer.NSUser.SetCredentials(NSCredential[])
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetCredentials(NSCredential[] credentials)
@@ -653,7 +653,7 @@ items:
   nameWithType: NSUser.SetDeleted(Bool)
   fullName: CRMScript.NetServer.NSUser.SetDeleted(Bool)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetDeleted(Bool deleted)
@@ -675,7 +675,7 @@ items:
   nameWithType: NSUser.SetDisplayName(String)
   fullName: CRMScript.NetServer.NSUser.SetDisplayName(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetDisplayName(String displayName)
@@ -696,7 +696,7 @@ items:
   nameWithType: NSUser.SetEjUserId(Integer)
   fullName: CRMScript.NetServer.NSUser.SetEjUserId(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetEjUserId(Integer ejUserId)
@@ -740,7 +740,7 @@ items:
   nameWithType: NSUser.SetIsOnTravel(Bool)
   fullName: CRMScript.NetServer.NSUser.SetIsOnTravel(Bool)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetIsOnTravel(Bool isOnTravel)
@@ -762,7 +762,7 @@ items:
   nameWithType: NSUser.SetIsPersonRetired(Bool)
   fullName: CRMScript.NetServer.NSUser.SetIsPersonRetired(Bool)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetIsPersonRetired(Bool isPersonRetired)
@@ -784,7 +784,7 @@ items:
   nameWithType: NSUser.SetLastlogin(DateTime)
   fullName: CRMScript.NetServer.NSUser.SetLastlogin(DateTime)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetLastlogin(DateTime lastlogin)
@@ -806,7 +806,7 @@ items:
   nameWithType: NSUser.SetLastlogout(DateTime)
   fullName: CRMScript.NetServer.NSUser.SetLastlogout(DateTime)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetLastlogout(DateTime lastlogout)
@@ -850,7 +850,7 @@ items:
   nameWithType: NSUser.SetName(String)
   fullName: CRMScript.NetServer.NSUser.SetName(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetName(String name)
@@ -872,7 +872,7 @@ items:
   nameWithType: NSUser.SetNickName(String)
   fullName: CRMScript.NetServer.NSUser.SetNickName(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetNickName(String nickName)
@@ -894,7 +894,7 @@ items:
   nameWithType: NSUser.SetOtherGroups(NSUserGroup[])
   fullName: CRMScript.NetServer.NSUser.SetOtherGroups(NSUserGroup[])
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetOtherGroups(NSUserGroup[] otherGroups)
@@ -916,7 +916,7 @@ items:
   nameWithType: NSUser.SetPerson(NSPerson)
   fullName: CRMScript.NetServer.NSUser.SetPerson(NSPerson)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetPerson(NSPerson person)
@@ -938,7 +938,7 @@ items:
   nameWithType: NSUser.SetRank(Integer)
   fullName: CRMScript.NetServer.NSUser.SetRank(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetRank(Integer rank)
@@ -960,7 +960,7 @@ items:
   nameWithType: NSUser.SetRequestSignature(String)
   fullName: CRMScript.NetServer.NSUser.SetRequestSignature(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetRequestSignature(String requestSignature)
@@ -982,7 +982,7 @@ items:
   nameWithType: NSUser.SetRole(NSRole)
   fullName: CRMScript.NetServer.NSUser.SetRole(NSRole)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetRole(NSRole role)
@@ -1004,7 +1004,7 @@ items:
   nameWithType: NSUser.SetTicketCategories(NSMDOListItem[])
   fullName: CRMScript.NetServer.NSUser.SetTicketCategories(NSMDOListItem[])
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetTicketCategories(NSMDOListItem[] ticketCategories)
@@ -1026,7 +1026,7 @@ items:
   nameWithType: NSUser.SetTooltip(String)
   fullName: CRMScript.NetServer.NSUser.SetTooltip(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetTooltip(String tooltip)
@@ -1048,7 +1048,7 @@ items:
   nameWithType: NSUser.SetType(Integer)
   fullName: CRMScript.NetServer.NSUser.SetType(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetType(Integer type)
@@ -1070,7 +1070,7 @@ items:
   nameWithType: NSUser.SetUserGroup(NSUserGroup)
   fullName: CRMScript.NetServer.NSUser.SetUserGroup(NSUserGroup)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetUserGroup(NSUserGroup userGroup)
@@ -1092,7 +1092,7 @@ items:
   nameWithType: NSUser.SetUserName(String)
   fullName: CRMScript.NetServer.NSUser.SetUserName(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetUserName(String userName)
@@ -1114,7 +1114,7 @@ items:
   nameWithType: NSUser.SetWaitingForApproval(Bool)
   fullName: CRMScript.NetServer.NSUser.SetWaitingForApproval(Bool)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetWaitingForApproval(Bool waitingForApproval)
