--- a/docs/api-reference/CRMScript.NetServer.NSUserAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSUserAgent.yml
@@ -129,7 +129,7 @@ items:
   nameWithType: NSUserAgent.AddOwnerContact(Integer)
   fullName: CRMScript.NetServer.NSUserAgent.AddOwnerContact(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void AddOwnerContact(Integer contactId)
@@ -1487,7 +1487,7 @@ items:
   nameWithType: NSUserAgent.GetValidUserName(Integer,Integer,Integer,String)
   fullName: CRMScript.NetServer.NSUserAgent.GetValidUserName(Integer,Integer,Integer,String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetValidUserName(Integer associateId, Integer type, Integer personId, String userName)
@@ -1540,7 +1540,7 @@ items:
   nameWithType: NSUserAgent.IsNickNameUnique(Integer,String)
   fullName: CRMScript.NetServer.NSUserAgent.IsNickNameUnique(Integer,String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Bool IsNickNameUnique(Integer associateId, String nickName)
@@ -1565,7 +1565,7 @@ items:
   nameWithType: NSUserAgent.IsPasswordValid(Integer,Integer,Integer,String)
   fullName: CRMScript.NetServer.NSUserAgent.IsPasswordValid(Integer,Integer,Integer,String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Bool IsPasswordValid(Integer associateId, Integer type, Integer personId, String password)
