--- a/docs/api-reference/CRMScript.NetServer.NSUserInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSUserInfo.yml
@@ -41,7 +41,7 @@ items:
   nameWithType: NSUserInfo
   fullName: CRMScript.NetServer.NSUserInfo
   type: Class
-  summary: 
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSUserInfo.#ctor
   commentId: M:CRMScript.NetServer.NSUserInfo.#ctor
@@ -53,7 +53,7 @@ items:
   nameWithType: NSUserInfo.#ctor
   fullName: CRMScript.NetServer.NSUserInfo.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSUserInfo class.\n"
   remarks: 
   syntax: 
     content: NSUserInfo
@@ -88,7 +88,7 @@ items:
   nameWithType: NSUserInfo.GetDeleted()
   fullName: CRMScript.NetServer.NSUserInfo.GetDeleted()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Bool GetDeleted()
@@ -108,7 +108,7 @@ items:
   nameWithType: NSUserInfo.GetEjUserId()
   fullName: CRMScript.NetServer.NSUserInfo.GetEjUserId()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetEjUserId()
@@ -148,7 +148,7 @@ items:
   nameWithType: NSUserInfo.GetPersonId()
   fullName: CRMScript.NetServer.NSUserInfo.GetPersonId()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetPersonId()
@@ -168,7 +168,7 @@ items:
   nameWithType: NSUserInfo.GetRank()
   fullName: CRMScript.NetServer.NSUserInfo.GetRank()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetRank()
@@ -228,7 +228,7 @@ items:
   nameWithType: NSUserInfo.GetTooltip()
   fullName: CRMScript.NetServer.NSUserInfo.GetTooltip()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetTooltip()
@@ -248,7 +248,7 @@ items:
   nameWithType: NSUserInfo.GetUserGroupId()
   fullName: CRMScript.NetServer.NSUserInfo.GetUserGroupId()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetUserGroupId()
@@ -308,7 +308,7 @@ items:
   nameWithType: NSUserInfo.GetUserInfoId()
   fullName: CRMScript.NetServer.NSUserInfo.GetUserInfoId()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetUserInfoId()
@@ -328,7 +328,7 @@ items:
   nameWithType: NSUserInfo.GetUserName()
   fullName: CRMScript.NetServer.NSUserInfo.GetUserName()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetUserName()
@@ -368,7 +368,7 @@ items:
   nameWithType: NSUserInfo.SetCanLogon(Bool)
   fullName: CRMScript.NetServer.NSUserInfo.SetCanLogon(Bool)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetCanLogon(Bool canLogon)
@@ -390,7 +390,7 @@ items:
   nameWithType: NSUserInfo.SetDeleted(Bool)
   fullName: CRMScript.NetServer.NSUserInfo.SetDeleted(Bool)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetDeleted(Bool deleted)
@@ -412,7 +412,7 @@ items:
   nameWithType: NSUserInfo.SetEjUserId(Integer)
   fullName: CRMScript.NetServer.NSUserInfo.SetEjUserId(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetEjUserId(Integer ejUserId)
@@ -434,7 +434,7 @@ items:
   nameWithType: NSUserInfo.SetGrantedLicenses(String[])
   fullName: CRMScript.NetServer.NSUserInfo.SetGrantedLicenses(String[])
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetGrantedLicenses(String[] grantedLicenses)
@@ -456,7 +456,7 @@ items:
   nameWithType: NSUserInfo.SetPersonId(Integer)
   fullName: CRMScript.NetServer.NSUserInfo.SetPersonId(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetPersonId(Integer personId)
@@ -478,7 +478,7 @@ items:
   nameWithType: NSUserInfo.SetRank(Integer)
   fullName: CRMScript.NetServer.NSUserInfo.SetRank(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetRank(Integer rank)
@@ -500,7 +500,7 @@ items:
   nameWithType: NSUserInfo.SetRoleName(String)
   fullName: CRMScript.NetServer.NSUserInfo.SetRoleName(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetRoleName(String roleName)
@@ -522,7 +522,7 @@ items:
   nameWithType: NSUserInfo.SetRoleTooltip(String)
   fullName: CRMScript.NetServer.NSUserInfo.SetRoleTooltip(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetRoleTooltip(String roleTooltip)
@@ -544,7 +544,7 @@ items:
   nameWithType: NSUserInfo.SetTooltip(String)
   fullName: CRMScript.NetServer.NSUserInfo.SetTooltip(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetTooltip(String tooltip)
@@ -566,7 +566,7 @@ items:
   nameWithType: NSUserInfo.SetUserGroupId(Integer)
   fullName: CRMScript.NetServer.NSUserInfo.SetUserGroupId(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetUserGroupId(Integer userGroupId)
@@ -588,7 +588,7 @@ items:
   nameWithType: NSUserInfo.SetUserGroupName(String)
   fullName: CRMScript.NetServer.NSUserInfo.SetUserGroupName(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetUserGroupName(String userGroupName)
@@ -610,7 +610,7 @@ items:
   nameWithType: NSUserInfo.SetUserGroupTooltip(String)
   fullName: CRMScript.NetServer.NSUserInfo.SetUserGroupTooltip(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetUserGroupTooltip(String userGroupTooltip)
@@ -632,7 +632,7 @@ items:
   nameWithType: NSUserInfo.SetUserInfoId(Integer)
   fullName: CRMScript.NetServer.NSUserInfo.SetUserInfoId(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetUserInfoId(Integer userInfoId)
@@ -654,7 +654,7 @@ items:
   nameWithType: NSUserInfo.SetUserName(String)
   fullName: CRMScript.NetServer.NSUserInfo.SetUserName(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetUserName(String userName)
@@ -676,7 +676,7 @@ items:
   nameWithType: NSUserInfo.SetUserType(Integer)
   fullName: CRMScript.NetServer.NSUserInfo.SetUserType(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetUserType(Integer userType)
