--- a/docs/api-reference/CRMScript.NetServer.NSUserValidationResult.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSUserValidationResult.yml
@@ -15,7 +15,7 @@ items:
   nameWithType: NSUserValidationResult
   fullName: CRMScript.NetServer.NSUserValidationResult
   type: Class
-  summary: 
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSUserValidationResult.#ctor
   commentId: M:CRMScript.NetServer.NSUserValidationResult.#ctor
@@ -27,7 +27,7 @@ items:
   nameWithType: NSUserValidationResult.#ctor
   fullName: CRMScript.NetServer.NSUserValidationResult.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSUserValidationResult class.\n"
   remarks: 
   syntax: 
     content: NSUserValidationResult
@@ -82,7 +82,7 @@ items:
   nameWithType: NSUserValidationResult.SetReason(String)
   fullName: CRMScript.NetServer.NSUserValidationResult.SetReason(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetReason(String reason)
@@ -104,7 +104,7 @@ items:
   nameWithType: NSUserValidationResult.SetResult(Bool)
   fullName: CRMScript.NetServer.NSUserValidationResult.SetResult(Bool)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetResult(Bool result)
