--- a/docs/api-reference/CRMScript.NetServer.NSVersionInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSVersionInfo.yml
@@ -29,7 +29,7 @@ items:
   nameWithType: NSVersionInfo
   fullName: CRMScript.NetServer.NSVersionInfo
   type: Class
-  summary: 
+  summary: "\nAn instance of this class represents information about one version of one document.\n"
   example: 
 - uid: CRMScript.NetServer.NSVersionInfo.#ctor
   commentId: M:CRMScript.NetServer.NSVersionInfo.#ctor
@@ -41,7 +41,7 @@ items:
   nameWithType: NSVersionInfo.#ctor
   fullName: CRMScript.NetServer.NSVersionInfo.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSVersionInfo class.\n"
   remarks: 
   syntax: 
     content: NSVersionInfo
@@ -56,7 +56,7 @@ items:
   nameWithType: NSVersionInfo.GetCheckedInByAssociateId()
   fullName: CRMScript.NetServer.NSVersionInfo.GetCheckedInByAssociateId()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetCheckedInByAssociateId()
@@ -76,7 +76,7 @@ items:
   nameWithType: NSVersionInfo.GetCheckedInByName()
   fullName: CRMScript.NetServer.NSVersionInfo.GetCheckedInByName()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetCheckedInByName()
@@ -96,7 +96,7 @@ items:
   nameWithType: NSVersionInfo.GetCheckedInDate()
   fullName: CRMScript.NetServer.NSVersionInfo.GetCheckedInDate()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: DateTime GetCheckedInDate()
@@ -116,7 +116,7 @@ items:
   nameWithType: NSVersionInfo.GetDescription()
   fullName: CRMScript.NetServer.NSVersionInfo.GetDescription()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetDescription()
@@ -136,7 +136,7 @@ items:
   nameWithType: NSVersionInfo.GetDisplayText()
   fullName: CRMScript.NetServer.NSVersionInfo.GetDisplayText()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetDisplayText()
@@ -156,7 +156,7 @@ items:
   nameWithType: NSVersionInfo.GetDocumentId()
   fullName: CRMScript.NetServer.NSVersionInfo.GetDocumentId()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetDocumentId()
@@ -176,7 +176,7 @@ items:
   nameWithType: NSVersionInfo.GetExternalReference()
   fullName: CRMScript.NetServer.NSVersionInfo.GetExternalReference()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetExternalReference()
@@ -216,7 +216,7 @@ items:
   nameWithType: NSVersionInfo.GetVersionId()
   fullName: CRMScript.NetServer.NSVersionInfo.GetVersionId()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetVersionId()
@@ -236,7 +236,7 @@ items:
   nameWithType: NSVersionInfo.SetCheckedInByAssociateId(Integer)
   fullName: CRMScript.NetServer.NSVersionInfo.SetCheckedInByAssociateId(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetCheckedInByAssociateId(Integer checkedInByAssociateId)
@@ -258,7 +258,7 @@ items:
   nameWithType: NSVersionInfo.SetCheckedInByName(String)
   fullName: CRMScript.NetServer.NSVersionInfo.SetCheckedInByName(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetCheckedInByName(String checkedInByName)
@@ -302,7 +302,7 @@ items:
   nameWithType: NSVersionInfo.SetDescription(String)
   fullName: CRMScript.NetServer.NSVersionInfo.SetDescription(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetDescription(String description)
@@ -324,7 +324,7 @@ items:
   nameWithType: NSVersionInfo.SetDisplayText(String)
   fullName: CRMScript.NetServer.NSVersionInfo.SetDisplayText(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetDisplayText(String displayText)
@@ -368,7 +368,7 @@ items:
   nameWithType: NSVersionInfo.SetExternalReference(String)
   fullName: CRMScript.NetServer.NSVersionInfo.SetExternalReference(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetExternalReference(String externalReference)
