--- a/docs/api-reference/CRMScript.NetServer.NSVisibleFor.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSVisibleFor.yml
@@ -17,7 +17,7 @@ items:
   nameWithType: NSVisibleFor
   fullName: CRMScript.NetServer.NSVisibleFor
   type: Class
-  summary: 
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSVisibleFor.#ctor
   commentId: M:CRMScript.NetServer.NSVisibleFor.#ctor
@@ -29,7 +29,7 @@ items:
   nameWithType: NSVisibleFor.#ctor
   fullName: CRMScript.NetServer.NSVisibleFor.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSVisibleFor class.\n"
   remarks: 
   syntax: 
     content: NSVisibleFor
@@ -104,7 +104,7 @@ items:
   nameWithType: NSVisibleFor.SetDisplayValue(String)
   fullName: CRMScript.NetServer.NSVisibleFor.SetDisplayValue(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetDisplayValue(String displayValue)
@@ -126,7 +126,7 @@ items:
   nameWithType: NSVisibleFor.SetVisibility(Integer)
   fullName: CRMScript.NetServer.NSVisibleFor.SetVisibility(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetVisibility(Integer visibility)
@@ -148,7 +148,7 @@ items:
   nameWithType: NSVisibleFor.SetVisibleId(Integer)
   fullName: CRMScript.NetServer.NSVisibleFor.SetVisibleId(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetVisibleId(Integer visibleId)
