--- a/docs/api-reference/CRMScript.NetServer.NSWebAppUsage.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSWebAppUsage.yml
@@ -25,7 +25,7 @@ items:
   nameWithType: NSWebAppUsage
   fullName: CRMScript.NetServer.NSWebAppUsage
   type: Class
-  summary: 
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSWebAppUsage.#ctor
   commentId: M:CRMScript.NetServer.NSWebAppUsage.#ctor
@@ -37,7 +37,7 @@ items:
   nameWithType: NSWebAppUsage.#ctor
   fullName: CRMScript.NetServer.NSWebAppUsage.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSWebAppUsage class.\n"
   remarks: 
   syntax: 
     content: NSWebAppUsage
