--- a/docs/api-reference/CRMScript.NetServer.NSWebPanelEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSWebPanelEntity.yml
@@ -53,7 +53,7 @@ items:
   nameWithType: NSWebPanelEntity
   fullName: CRMScript.NetServer.NSWebPanelEntity
   type: Class
-  summary: 
+  summary: "\nContains information on a web panel.\n"
   example: 
 - uid: CRMScript.NetServer.NSWebPanelEntity.#ctor
   commentId: M:CRMScript.NetServer.NSWebPanelEntity.#ctor
@@ -65,7 +65,7 @@ items:
   nameWithType: NSWebPanelEntity.#ctor
   fullName: CRMScript.NetServer.NSWebPanelEntity.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSWebPanelEntity class.\n"
   remarks: 
   syntax: 
     content: NSWebPanelEntity
@@ -80,7 +80,7 @@ items:
   nameWithType: NSWebPanelEntity.GetDeleted()
   fullName: CRMScript.NetServer.NSWebPanelEntity.GetDeleted()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Bool GetDeleted()
@@ -100,7 +100,7 @@ items:
   nameWithType: NSWebPanelEntity.GetIcon()
   fullName: CRMScript.NetServer.NSWebPanelEntity.GetIcon()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetIcon()
@@ -120,7 +120,7 @@ items:
   nameWithType: NSWebPanelEntity.GetName()
   fullName: CRMScript.NetServer.NSWebPanelEntity.GetName()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetName()
@@ -140,7 +140,7 @@ items:
   nameWithType: NSWebPanelEntity.GetOnCentral()
   fullName: CRMScript.NetServer.NSWebPanelEntity.GetOnCentral()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Bool GetOnCentral()
@@ -160,7 +160,7 @@ items:
   nameWithType: NSWebPanelEntity.GetOnSalesMarketingPocket()
   fullName: CRMScript.NetServer.NSWebPanelEntity.GetOnSalesMarketingPocket()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Bool GetOnSalesMarketingPocket()
@@ -180,7 +180,7 @@ items:
   nameWithType: NSWebPanelEntity.GetOnSalesMarketingWeb()
   fullName: CRMScript.NetServer.NSWebPanelEntity.GetOnSalesMarketingWeb()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Bool GetOnSalesMarketingWeb()
@@ -200,7 +200,7 @@ items:
   nameWithType: NSWebPanelEntity.GetOnSatellite()
   fullName: CRMScript.NetServer.NSWebPanelEntity.GetOnSatellite()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Bool GetOnSatellite()
@@ -220,7 +220,7 @@ items:
   nameWithType: NSWebPanelEntity.GetOnSattelite()
   fullName: CRMScript.NetServer.NSWebPanelEntity.GetOnSattelite()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Bool GetOnSattelite()
@@ -238,7 +238,7 @@ items:
   nameWithType: NSWebPanelEntity.GetOnTravel()
   fullName: CRMScript.NetServer.NSWebPanelEntity.GetOnTravel()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Bool GetOnTravel()
@@ -258,7 +258,7 @@ items:
   nameWithType: NSWebPanelEntity.GetProgId()
   fullName: CRMScript.NetServer.NSWebPanelEntity.GetProgId()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetProgId()
@@ -278,7 +278,7 @@ items:
   nameWithType: NSWebPanelEntity.GetRank()
   fullName: CRMScript.NetServer.NSWebPanelEntity.GetRank()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetRank()
@@ -298,7 +298,7 @@ items:
   nameWithType: NSWebPanelEntity.GetShowInAddressBar()
   fullName: CRMScript.NetServer.NSWebPanelEntity.GetShowInAddressBar()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Bool GetShowInAddressBar()
@@ -318,7 +318,7 @@ items:
   nameWithType: NSWebPanelEntity.GetShowInMenuBar()
   fullName: CRMScript.NetServer.NSWebPanelEntity.GetShowInMenuBar()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Bool GetShowInMenuBar()
@@ -338,7 +338,7 @@ items:
   nameWithType: NSWebPanelEntity.GetShowInStatusBar()
   fullName: CRMScript.NetServer.NSWebPanelEntity.GetShowInStatusBar()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Bool GetShowInStatusBar()
@@ -358,7 +358,7 @@ items:
   nameWithType: NSWebPanelEntity.GetShowInToolBar()
   fullName: CRMScript.NetServer.NSWebPanelEntity.GetShowInToolBar()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Bool GetShowInToolBar()
@@ -378,7 +378,7 @@ items:
   nameWithType: NSWebPanelEntity.GetTooltip()
   fullName: CRMScript.NetServer.NSWebPanelEntity.GetTooltip()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetTooltip()
@@ -398,7 +398,7 @@ items:
   nameWithType: NSWebPanelEntity.GetUrl()
   fullName: CRMScript.NetServer.NSWebPanelEntity.GetUrl()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetUrl()
@@ -438,7 +438,7 @@ items:
   nameWithType: NSWebPanelEntity.GetVisibleIn()
   fullName: CRMScript.NetServer.NSWebPanelEntity.GetVisibleIn()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetVisibleIn()
@@ -458,7 +458,7 @@ items:
   nameWithType: NSWebPanelEntity.GetWebPanelId()
   fullName: CRMScript.NetServer.NSWebPanelEntity.GetWebPanelId()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetWebPanelId()
@@ -478,7 +478,7 @@ items:
   nameWithType: NSWebPanelEntity.GetWindowName()
   fullName: CRMScript.NetServer.NSWebPanelEntity.GetWindowName()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetWindowName()
@@ -498,7 +498,7 @@ items:
   nameWithType: NSWebPanelEntity.SetDeleted(Bool)
   fullName: CRMScript.NetServer.NSWebPanelEntity.SetDeleted(Bool)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetDeleted(Bool deleted)
@@ -520,7 +520,7 @@ items:
   nameWithType: NSWebPanelEntity.SetIcon(Integer)
   fullName: CRMScript.NetServer.NSWebPanelEntity.SetIcon(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetIcon(Integer icon)
@@ -542,7 +542,7 @@ items:
   nameWithType: NSWebPanelEntity.SetName(String)
   fullName: CRMScript.NetServer.NSWebPanelEntity.SetName(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetName(String name)
@@ -564,7 +564,7 @@ items:
   nameWithType: NSWebPanelEntity.SetOnCentral(Bool)
   fullName: CRMScript.NetServer.NSWebPanelEntity.SetOnCentral(Bool)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetOnCentral(Bool onCentral)
@@ -586,7 +586,7 @@ items:
   nameWithType: NSWebPanelEntity.SetOnSalesMarketingPocket(Bool)
   fullName: CRMScript.NetServer.NSWebPanelEntity.SetOnSalesMarketingPocket(Bool)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetOnSalesMarketingPocket(Bool onSalesMarketingPocket)
@@ -608,7 +608,7 @@ items:
   nameWithType: NSWebPanelEntity.SetOnSalesMarketingWeb(Bool)
   fullName: CRMScript.NetServer.NSWebPanelEntity.SetOnSalesMarketingWeb(Bool)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetOnSalesMarketingWeb(Bool onSalesMarketingWeb)
@@ -630,7 +630,7 @@ items:
   nameWithType: NSWebPanelEntity.SetOnSatellite(Bool)
   fullName: CRMScript.NetServer.NSWebPanelEntity.SetOnSatellite(Bool)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetOnSatellite(Bool onSatellite)
@@ -652,7 +652,7 @@ items:
   nameWithType: NSWebPanelEntity.SetOnSattelite(Bool)
   fullName: CRMScript.NetServer.NSWebPanelEntity.SetOnSattelite(Bool)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetOnSattelite(Bool onSattelite)
@@ -673,7 +673,7 @@ items:
   nameWithType: NSWebPanelEntity.SetOnTravel(Bool)
   fullName: CRMScript.NetServer.NSWebPanelEntity.SetOnTravel(Bool)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetOnTravel(Bool onTravel)
@@ -695,7 +695,7 @@ items:
   nameWithType: NSWebPanelEntity.SetProgId(String)
   fullName: CRMScript.NetServer.NSWebPanelEntity.SetProgId(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetProgId(String progId)
@@ -717,7 +717,7 @@ items:
   nameWithType: NSWebPanelEntity.SetRank(Integer)
   fullName: CRMScript.NetServer.NSWebPanelEntity.SetRank(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetRank(Integer rank)
@@ -739,7 +739,7 @@ items:
   nameWithType: NSWebPanelEntity.SetShowInAddressBar(Bool)
   fullName: CRMScript.NetServer.NSWebPanelEntity.SetShowInAddressBar(Bool)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetShowInAddressBar(Bool showInAddressBar)
@@ -761,7 +761,7 @@ items:
   nameWithType: NSWebPanelEntity.SetShowInMenuBar(Bool)
   fullName: CRMScript.NetServer.NSWebPanelEntity.SetShowInMenuBar(Bool)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetShowInMenuBar(Bool showInMenuBar)
@@ -783,7 +783,7 @@ items:
   nameWithType: NSWebPanelEntity.SetShowInStatusBar(Bool)
   fullName: CRMScript.NetServer.NSWebPanelEntity.SetShowInStatusBar(Bool)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetShowInStatusBar(Bool showInStatusBar)
@@ -805,7 +805,7 @@ items:
   nameWithType: NSWebPanelEntity.SetShowInToolBar(Bool)
   fullName: CRMScript.NetServer.NSWebPanelEntity.SetShowInToolBar(Bool)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetShowInToolBar(Bool showInToolBar)
@@ -827,7 +827,7 @@ items:
   nameWithType: NSWebPanelEntity.SetTooltip(String)
   fullName: CRMScript.NetServer.NSWebPanelEntity.SetTooltip(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetTooltip(String tooltip)
@@ -849,7 +849,7 @@ items:
   nameWithType: NSWebPanelEntity.SetUrl(String)
   fullName: CRMScript.NetServer.NSWebPanelEntity.SetUrl(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetUrl(String url)
@@ -871,7 +871,7 @@ items:
   nameWithType: NSWebPanelEntity.SetUrlEncoding(Integer)
   fullName: CRMScript.NetServer.NSWebPanelEntity.SetUrlEncoding(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetUrlEncoding(Integer urlEncoding)
@@ -893,7 +893,7 @@ items:
   nameWithType: NSWebPanelEntity.SetVisibleIn(Integer)
   fullName: CRMScript.NetServer.NSWebPanelEntity.SetVisibleIn(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetVisibleIn(Integer visibleIn)
@@ -915,7 +915,7 @@ items:
   nameWithType: NSWebPanelEntity.SetWebPanelId(Integer)
   fullName: CRMScript.NetServer.NSWebPanelEntity.SetWebPanelId(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetWebPanelId(Integer webPanelId)
@@ -937,7 +937,7 @@ items:
   nameWithType: NSWebPanelEntity.SetWindowName(String)
   fullName: CRMScript.NetServer.NSWebPanelEntity.SetWindowName(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetWindowName(String windowName)
