--- a/docs/api-reference/CRMScript.NetServer.NSWebhook.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSWebhook.yml
@@ -37,7 +37,7 @@ items:
   nameWithType: NSWebhook
   fullName: CRMScript.NetServer.NSWebhook
   type: Class
-  summary: 
+  summary: "\nnWebhook definitions. Webhooks broadcast events from NetServer to remote servers.\n"
   example: 
 - uid: CRMScript.NetServer.NSWebhook.#ctor
   commentId: M:CRMScript.NetServer.NSWebhook.#ctor
@@ -49,7 +49,7 @@ items:
   nameWithType: NSWebhook.#ctor
   fullName: CRMScript.NetServer.NSWebhook.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSWebhook class.\n"
   remarks: 
   syntax: 
     content: NSWebhook
