--- a/docs/api-reference/CRMScript.NetServer.NSWebhookResult.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSWebhookResult.yml
@@ -15,7 +15,7 @@ items:
   nameWithType: NSWebhookResult
   fullName: CRMScript.NetServer.NSWebhookResult
   type: Class
-  summary: 
+  summary: "\nResult of calling a webhook.\n"
   example: 
 - uid: CRMScript.NetServer.NSWebhookResult.#ctor
   commentId: M:CRMScript.NetServer.NSWebhookResult.#ctor
@@ -27,7 +27,7 @@ items:
   nameWithType: NSWebhookResult.#ctor
   fullName: CRMScript.NetServer.NSWebhookResult.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSWebhookResult class.\n"
   remarks: 
   syntax: 
     content: NSWebhookResult
