--- a/docs/api-reference/CRMScript.NetServer.NSWindowPosSize.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSWindowPosSize.yml
@@ -33,7 +33,7 @@ items:
   nameWithType: NSWindowPosSize
   fullName: CRMScript.NetServer.NSWindowPosSize
   type: Class
-  summary: 
+  summary: "\nWindow and dialog position and size settings.\n"
   example: 
 - uid: CRMScript.NetServer.NSWindowPosSize.#ctor
   commentId: M:CRMScript.NetServer.NSWindowPosSize.#ctor
@@ -45,7 +45,7 @@ items:
   nameWithType: NSWindowPosSize.#ctor
   fullName: CRMScript.NetServer.NSWindowPosSize.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSWindowPosSize class.\n"
   remarks: 
   syntax: 
     content: NSWindowPosSize
