--- a/docs/api-reference/CRMScript.NetServer.ReportLayout.yml
+++ b/docs/api-reference/CRMScript.NetServer.ReportLayout.yml
@@ -20,7 +20,7 @@ items:
   nameWithType: ReportLayout
   fullName: CRMScript.NetServer.ReportLayout
   type: Enum
-  summary: 
+  summary: # TODO
 - uid: CRMScript.NetServer.ReportLayout.Unknown
   commentId: F:CRMScript.NetServer.ReportLayout.Unknown
   id: ReportLayout.Unknown
