--- a/docs/api-reference/CRMScript.NetServer.RoleType.yml
+++ b/docs/api-reference/CRMScript.NetServer.RoleType.yml
@@ -15,7 +15,7 @@ items:
   nameWithType: RoleType
   fullName: CRMScript.NetServer.RoleType
   type: Enum
-  summary: 
+  summary: # TODO
 - uid: CRMScript.NetServer.RoleType.Employee
   commentId: F:CRMScript.NetServer.RoleType.Employee
   id: RoleType.Employee
