--- a/docs/api-reference/CRMScript.NetServer.UDefFieldType.yml
+++ b/docs/api-reference/CRMScript.NetServer.UDefFieldType.yml
@@ -19,7 +19,7 @@ items:
   nameWithType: UDefFieldType
   fullName: CRMScript.NetServer.UDefFieldType
   type: Enum
-  summary: 
+  summary: # TODO
 - uid: CRMScript.NetServer.UDefFieldType.Number
   commentId: F:CRMScript.NetServer.UDefFieldType.Number
   id: UDefFieldType.Number
