--- a/docs/api-reference/CRMScript.NetServer.NSSale.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSale.yml
@@ -61,7 +61,7 @@ items:
   nameWithType: NSSale
   fullName: CRMScript.NetServer.NSSale
   type: Class
-  summary: 
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSSale.#ctor
   commentId: M:CRMScript.NetServer.NSSale.#ctor
@@ -73,7 +73,7 @@ items:
   nameWithType: NSSale.#ctor
   fullName: CRMScript.NetServer.NSSale.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSSale class.\n"
   remarks: 
   syntax: 
     content: NSSale
