--- a/docs/api-reference/CRMScript.NetServer.NSShipmentMessageBlockEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSShipmentMessageBlockEntity.yml
@@ -27,7 +27,7 @@ items:
   nameWithType: NSShipmentMessageBlockEntity
   fullName: CRMScript.NetServer.NSShipmentMessageBlockEntity
   type: Class
-  summary: 
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSShipmentMessageBlockEntity.#ctor
   commentId: M:CRMScript.NetServer.NSShipmentMessageBlockEntity.#ctor
@@ -39,7 +39,7 @@ items:
   nameWithType: NSShipmentMessageBlockEntity.#ctor
   fullName: CRMScript.NetServer.NSShipmentMessageBlockEntity.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSShipmentMessageBlockEntity class.\n"
   remarks: 
   syntax: 
     content: NSShipmentMessageBlockEntity
