--- a/docs/api-reference/CRMScript.NetServer.NSSoSystemInfoCarrier.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSoSystemInfoCarrier.yml
@@ -51,7 +51,7 @@ items:
   nameWithType: NSSoSystemInfoCarrier
   fullName: CRMScript.NetServer.NSSoSystemInfoCarrier
   type: Class
-  summary: 
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSSoSystemInfoCarrier.#ctor
   commentId: M:CRMScript.NetServer.NSSoSystemInfoCarrier.#ctor
@@ -63,7 +63,7 @@ items:
   nameWithType: NSSoSystemInfoCarrier.#ctor
   fullName: CRMScript.NetServer.NSSoSystemInfoCarrier.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSSoSystemInfoCarrier class.\n"
   remarks: 
   syntax: 
     content: NSSoSystemInfoCarrier
@@ -78,7 +78,7 @@ items:
   nameWithType: NSSoSystemInfoCarrier.GetAccumulatedNextCheckDate()
   fullName: CRMScript.NetServer.NSSoSystemInfoCarrier.GetAccumulatedNextCheckDate()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: DateTime GetAccumulatedNextCheckDate()
@@ -96,7 +96,7 @@ items:
   nameWithType: NSSoSystemInfoCarrier.GetAssemblyVersion()
   fullName: CRMScript.NetServer.NSSoSystemInfoCarrier.GetAssemblyVersion()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetAssemblyVersion()
@@ -114,7 +114,7 @@ items:
   nameWithType: NSSoSystemInfoCarrier.GetBranchName()
   fullName: CRMScript.NetServer.NSSoSystemInfoCarrier.GetBranchName()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetBranchName()
@@ -132,7 +132,7 @@ items:
   nameWithType: NSSoSystemInfoCarrier.GetBuildLabel()
   fullName: CRMScript.NetServer.NSSoSystemInfoCarrier.GetBuildLabel()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetBuildLabel()
@@ -150,7 +150,7 @@ items:
   nameWithType: NSSoSystemInfoCarrier.GetBuildType()
   fullName: CRMScript.NetServer.NSSoSystemInfoCarrier.GetBuildType()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetBuildType()
@@ -168,7 +168,7 @@ items:
   nameWithType: NSSoSystemInfoCarrier.GetCompanyId()
   fullName: CRMScript.NetServer.NSSoSystemInfoCarrier.GetCompanyId()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetCompanyId()
@@ -186,7 +186,7 @@ items:
   nameWithType: NSSoSystemInfoCarrier.GetCompanyName()
   fullName: CRMScript.NetServer.NSSoSystemInfoCarrier.GetCompanyName()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetCompanyName()
@@ -204,7 +204,7 @@ items:
   nameWithType: NSSoSystemInfoCarrier.GetDatabaseMinor()
   fullName: CRMScript.NetServer.NSSoSystemInfoCarrier.GetDatabaseMinor()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetDatabaseMinor()
@@ -222,7 +222,7 @@ items:
   nameWithType: NSSoSystemInfoCarrier.GetDatabaseName()
   fullName: CRMScript.NetServer.NSSoSystemInfoCarrier.GetDatabaseName()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetDatabaseName()
@@ -240,7 +240,7 @@ items:
   nameWithType: NSSoSystemInfoCarrier.GetDatabaseType()
   fullName: CRMScript.NetServer.NSSoSystemInfoCarrier.GetDatabaseType()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetDatabaseType()
@@ -258,7 +258,7 @@ items:
   nameWithType: NSSoSystemInfoCarrier.GetDatabaseVersion()
   fullName: CRMScript.NetServer.NSSoSystemInfoCarrier.GetDatabaseVersion()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetDatabaseVersion()
@@ -276,7 +276,7 @@ items:
   nameWithType: NSSoSystemInfoCarrier.GetDaysUntilNetServerExpiry()
   fullName: CRMScript.NetServer.NSSoSystemInfoCarrier.GetDaysUntilNetServerExpiry()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetDaysUntilNetServerExpiry()
@@ -294,7 +294,7 @@ items:
   nameWithType: NSSoSystemInfoCarrier.GetDescription()
   fullName: CRMScript.NetServer.NSSoSystemInfoCarrier.GetDescription()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetDescription()
@@ -312,7 +312,7 @@ items:
   nameWithType: NSSoSystemInfoCarrier.GetFileVersion()
   fullName: CRMScript.NetServer.NSSoSystemInfoCarrier.GetFileVersion()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetFileVersion()
@@ -330,7 +330,7 @@ items:
   nameWithType: NSSoSystemInfoCarrier.GetIsOnTravel()
   fullName: CRMScript.NetServer.NSSoSystemInfoCarrier.GetIsOnTravel()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Bool GetIsOnTravel()
@@ -348,7 +348,7 @@ items:
   nameWithType: NSSoSystemInfoCarrier.GetIsSatellite()
   fullName: CRMScript.NetServer.NSSoSystemInfoCarrier.GetIsSatellite()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Bool GetIsSatellite()
@@ -366,7 +366,7 @@ items:
   nameWithType: NSSoSystemInfoCarrier.GetIsUnicode()
   fullName: CRMScript.NetServer.NSSoSystemInfoCarrier.GetIsUnicode()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Bool GetIsUnicode()
@@ -384,7 +384,7 @@ items:
   nameWithType: NSSoSystemInfoCarrier.GetLicense()
   fullName: CRMScript.NetServer.NSSoSystemInfoCarrier.GetLicense()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: NSLicenseInfo GetLicense()
@@ -402,7 +402,7 @@ items:
   nameWithType: NSSoSystemInfoCarrier.GetWarningEnglish()
   fullName: CRMScript.NetServer.NSSoSystemInfoCarrier.GetWarningEnglish()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetWarningEnglish()
@@ -420,7 +420,7 @@ items:
   nameWithType: NSSoSystemInfoCarrier.GetWarningResource()
   fullName: CRMScript.NetServer.NSSoSystemInfoCarrier.GetWarningResource()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetWarningResource()
@@ -438,7 +438,7 @@ items:
   nameWithType: NSSoSystemInfoCarrier.SetAccumulatedNextCheckDate(DateTime)
   fullName: CRMScript.NetServer.NSSoSystemInfoCarrier.SetAccumulatedNextCheckDate(DateTime)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetAccumulatedNextCheckDate(DateTime date)
@@ -459,7 +459,7 @@ items:
   nameWithType: NSSoSystemInfoCarrier.SetAssemblyVersion(String)
   fullName: CRMScript.NetServer.NSSoSystemInfoCarrier.SetAssemblyVersion(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetAssemblyVersion(String version)
@@ -480,7 +480,7 @@ items:
   nameWithType: NSSoSystemInfoCarrier.SetBranchName(String)
   fullName: CRMScript.NetServer.NSSoSystemInfoCarrier.SetBranchName(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetBranchName(String branch)
@@ -501,7 +501,7 @@ items:
   nameWithType: NSSoSystemInfoCarrier.SetBuildLabel(String)
   fullName: CRMScript.NetServer.NSSoSystemInfoCarrier.SetBuildLabel(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetBuildLabel(String label)
@@ -522,7 +522,7 @@ items:
   nameWithType: NSSoSystemInfoCarrier.SetBuildType(Integer)
   fullName: CRMScript.NetServer.NSSoSystemInfoCarrier.SetBuildType(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetBuildType(Integer type)
@@ -543,7 +543,7 @@ items:
   nameWithType: NSSoSystemInfoCarrier.SetCompanyId(Integer)
   fullName: CRMScript.NetServer.NSSoSystemInfoCarrier.SetCompanyId(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetCompanyId(Integer id)
@@ -564,7 +564,7 @@ items:
   nameWithType: NSSoSystemInfoCarrier.SetCompanyName(String)
   fullName: CRMScript.NetServer.NSSoSystemInfoCarrier.SetCompanyName(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetCompanyName(String name)
@@ -585,7 +585,7 @@ items:
   nameWithType: NSSoSystemInfoCarrier.SetDatabaseMinor(String)
   fullName: CRMScript.NetServer.NSSoSystemInfoCarrier.SetDatabaseMinor(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetDatabaseMinor(String databaseMinor)
@@ -606,7 +606,7 @@ items:
   nameWithType: NSSoSystemInfoCarrier.SetDatabaseName(String)
   fullName: CRMScript.NetServer.NSSoSystemInfoCarrier.SetDatabaseName(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetDatabaseName(String databaseName)
@@ -627,7 +627,7 @@ items:
   nameWithType: NSSoSystemInfoCarrier.SetDatabaseType(String)
   fullName: CRMScript.NetServer.NSSoSystemInfoCarrier.SetDatabaseType(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetDatabaseType(String type)
@@ -648,7 +648,7 @@ items:
   nameWithType: NSSoSystemInfoCarrier.SetDatabaseVersion(Integer)
   fullName: CRMScript.NetServer.NSSoSystemInfoCarrier.SetDatabaseVersion(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetDatabaseVersion(Integer version)
@@ -669,7 +669,7 @@ items:
   nameWithType: NSSoSystemInfoCarrier.SetDaysUntilNetServerExpiry(Integer)
   fullName: CRMScript.NetServer.NSSoSystemInfoCarrier.SetDaysUntilNetServerExpiry(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetDaysUntilNetServerExpiry(Integer expiry)
@@ -690,7 +690,7 @@ items:
   nameWithType: NSSoSystemInfoCarrier.SetDescription(String)
   fullName: CRMScript.NetServer.NSSoSystemInfoCarrier.SetDescription(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetDescription(String description)
@@ -711,7 +711,7 @@ items:
   nameWithType: NSSoSystemInfoCarrier.SetFileVersion(String)
   fullName: CRMScript.NetServer.NSSoSystemInfoCarrier.SetFileVersion(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetFileVersion(String version)
@@ -732,7 +732,7 @@ items:
   nameWithType: NSSoSystemInfoCarrier.SetIsOnTravel(Bool)
   fullName: CRMScript.NetServer.NSSoSystemInfoCarrier.SetIsOnTravel(Bool)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetIsOnTravel(Bool isOnTravel)
@@ -753,7 +753,7 @@ items:
   nameWithType: NSSoSystemInfoCarrier.SetIsSatellite(Bool)
   fullName: CRMScript.NetServer.NSSoSystemInfoCarrier.SetIsSatellite(Bool)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetIsSatellite(Bool isSatellite)
@@ -774,7 +774,7 @@ items:
   nameWithType: NSSoSystemInfoCarrier.SetIsUnicode(Bool)
   fullName: CRMScript.NetServer.NSSoSystemInfoCarrier.SetIsUnicode(Bool)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetIsUnicode(Bool isUnicode)
@@ -795,7 +795,7 @@ items:
   nameWithType: NSSoSystemInfoCarrier.SetLicense(NSLicenseInfo)
   fullName: CRMScript.NetServer.NSSoSystemInfoCarrier.SetLicense(NSLicenseInfo)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetLicense(NSLicenseInfo license)
@@ -816,7 +816,7 @@ items:
   nameWithType: NSSoSystemInfoCarrier.SetWarningEnglish(String)
   fullName: CRMScript.NetServer.NSSoSystemInfoCarrier.SetWarningEnglish(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetWarningEnglish(String warning)
@@ -837,7 +837,7 @@ items:
   nameWithType: NSSoSystemInfoCarrier.SetWarningResource(String)
   fullName: CRMScript.NetServer.NSSoSystemInfoCarrier.SetWarningResource(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetWarningResource(String resource)
