--- a/docs/api-reference/CRMScript.NetServer.NSSuggestedDocumentEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSuggestedDocumentEntity.yml
@@ -33,7 +33,7 @@ items:
   nameWithType: NSSuggestedDocumentEntity
   fullName: CRMScript.NetServer.NSSuggestedDocumentEntity
   type: Class
-  summary: 
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSSuggestedDocumentEntity.#ctor
   commentId: M:CRMScript.NetServer.NSSuggestedDocumentEntity.#ctor
@@ -45,7 +45,7 @@ items:
   nameWithType: NSSuggestedDocumentEntity.#ctor
   fullName: CRMScript.NetServer.NSSuggestedDocumentEntity.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSSuggestedDocumentEntity class.\n"
   remarks: 
   syntax: 
     content: NSSuggestedDocumentEntity
