--- a/docs/api-reference/CRMScript.NetServer.NSTabOrder.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTabOrder.yml
@@ -19,7 +19,7 @@ items:
   nameWithType: NSTabOrder
   fullName: CRMScript.NetServer.NSTabOrder
   type: Class
-  summary: 
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSTabOrder.#ctor
   commentId: M:CRMScript.NetServer.NSTabOrder.#ctor
@@ -31,7 +31,7 @@ items:
   nameWithType: NSTabOrder.#ctor
   fullName: CRMScript.NetServer.NSTabOrder.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSTabOrder class.\n"
   remarks: 
   syntax: 
     content: NSTabOrder
@@ -46,7 +46,7 @@ items:
   nameWithType: NSTabOrder.GetAssociateId()
   fullName: CRMScript.NetServer.NSTabOrder.GetAssociateId()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetAssociateId()
@@ -66,7 +66,7 @@ items:
   nameWithType: NSTabOrder.GetOrder()
   fullName: CRMScript.NetServer.NSTabOrder.GetOrder()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetOrder()
@@ -86,7 +86,7 @@ items:
   nameWithType: NSTabOrder.GetTabName()
   fullName: CRMScript.NetServer.NSTabOrder.GetTabName()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetTabName()
@@ -106,7 +106,7 @@ items:
   nameWithType: NSTabOrder.GetTabOrderId()
   fullName: CRMScript.NetServer.NSTabOrder.GetTabOrderId()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetTabOrderId()
@@ -126,7 +126,7 @@ items:
   nameWithType: NSTabOrder.SetAssociateId(Integer)
   fullName: CRMScript.NetServer.NSTabOrder.SetAssociateId(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetAssociateId(Integer associateId)
@@ -148,7 +148,7 @@ items:
   nameWithType: NSTabOrder.SetOrder(String)
   fullName: CRMScript.NetServer.NSTabOrder.SetOrder(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetOrder(String order)
@@ -170,7 +170,7 @@ items:
   nameWithType: NSTabOrder.SetTabName(String)
   fullName: CRMScript.NetServer.NSTabOrder.SetTabName(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetTabName(String tabName)
@@ -192,7 +192,7 @@ items:
   nameWithType: NSTabOrder.SetTabOrderId(Integer)
   fullName: CRMScript.NetServer.NSTabOrder.SetTabOrderId(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetTabOrderId(Integer tabOrderId)
