--- a/docs/api-reference/CRMScript.NetServer.NSTag.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTag.yml
@@ -17,7 +17,7 @@ items:
   nameWithType: NSTag
   fullName: CRMScript.NetServer.NSTag
   type: Class
-  summary: 
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSTag.#ctor
   commentId: M:CRMScript.NetServer.NSTag.#ctor
@@ -29,7 +29,7 @@ items:
   nameWithType: NSTag.#ctor
   fullName: CRMScript.NetServer.NSTag.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSTag class.\n"
   remarks: 
   syntax: 
     content: NSTag
@@ -44,7 +44,7 @@ items:
   nameWithType: NSTag.GetId()
   fullName: CRMScript.NetServer.NSTag.GetId()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetId()
@@ -64,7 +64,7 @@ items:
   nameWithType: NSTag.GetName()
   fullName: CRMScript.NetServer.NSTag.GetName()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetName()
@@ -84,7 +84,7 @@ items:
   nameWithType: NSTag.GetToolTip()
   fullName: CRMScript.NetServer.NSTag.GetToolTip()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetToolTip()
@@ -104,7 +104,7 @@ items:
   nameWithType: NSTag.SetId(Integer)
   fullName: CRMScript.NetServer.NSTag.SetId(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetId(Integer id)
@@ -126,7 +126,7 @@ items:
   nameWithType: NSTag.SetName(String)
   fullName: CRMScript.NetServer.NSTag.SetName(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetName(String name)
@@ -148,7 +148,7 @@ items:
   nameWithType: NSTag.SetToolTip(String)
   fullName: CRMScript.NetServer.NSTag.SetToolTip(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetToolTip(String toolTip)
