--- a/docs/api-reference/CRMScript.NetServer.NSTemplateInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTemplateInfo.yml
@@ -19,7 +19,7 @@ items:
   nameWithType: NSTemplateInfo
   fullName: CRMScript.NetServer.NSTemplateInfo
   type: Class
-  summary: 
+  summary: "\nInformation about a document template, i.e., a document that generally contains unresolved merge tags and that is used as the source for creating new documents.\n"
   example: 
 - uid: CRMScript.NetServer.NSTemplateInfo.#ctor
   commentId: M:CRMScript.NetServer.NSTemplateInfo.#ctor
@@ -31,7 +31,7 @@ items:
   nameWithType: NSTemplateInfo.#ctor
   fullName: CRMScript.NetServer.NSTemplateInfo.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSTemplateInfo class.\n"
   remarks: 
   syntax: 
     content: NSTemplateInfo
@@ -46,7 +46,7 @@ items:
   nameWithType: NSTemplateInfo.GetDescription()
   fullName: CRMScript.NetServer.NSTemplateInfo.GetDescription()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetDescription()
@@ -66,7 +66,7 @@ items:
   nameWithType: NSTemplateInfo.GetExternalReference()
   fullName: CRMScript.NetServer.NSTemplateInfo.GetExternalReference()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetExternalReference()
@@ -86,7 +86,7 @@ items:
   nameWithType: NSTemplateInfo.GetName()
   fullName: CRMScript.NetServer.NSTemplateInfo.GetName()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetName()
@@ -106,7 +106,7 @@ items:
   nameWithType: NSTemplateInfo.GetPluginId()
   fullName: CRMScript.NetServer.NSTemplateInfo.GetPluginId()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetPluginId()
@@ -126,7 +126,7 @@ items:
   nameWithType: NSTemplateInfo.SetDescription(String)
   fullName: CRMScript.NetServer.NSTemplateInfo.SetDescription(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetDescription(String description)
@@ -148,7 +148,7 @@ items:
   nameWithType: NSTemplateInfo.SetExternalReference(String)
   fullName: CRMScript.NetServer.NSTemplateInfo.SetExternalReference(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetExternalReference(String externalReference)
@@ -170,7 +170,7 @@ items:
   nameWithType: NSTemplateInfo.SetName(String)
   fullName: CRMScript.NetServer.NSTemplateInfo.SetName(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetName(String name)
@@ -192,7 +192,7 @@ items:
   nameWithType: NSTemplateInfo.SetPluginId(Integer)
   fullName: CRMScript.NetServer.NSTemplateInfo.SetPluginId(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetPluginId(Integer pluginId)
