--- a/docs/api-reference/CRMScript.NetServer.NSTicketCategory.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTicketCategory.yml
@@ -17,7 +17,7 @@ items:
   nameWithType: NSTicketCategory
   fullName: CRMScript.NetServer.NSTicketCategory
   type: Class
-  summary: 
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSTicketCategory.#ctor
   commentId: M:CRMScript.NetServer.NSTicketCategory.#ctor
@@ -29,7 +29,7 @@ items:
   nameWithType: NSTicketCategory.#ctor
   fullName: CRMScript.NetServer.NSTicketCategory.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSTicketCategory class.\n"
   remarks: 
   syntax: 
     content: NSTicketCategory
