--- a/docs/api-reference/CRMScript.NetServer.NSUserGroup.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSUserGroup.yml
@@ -21,7 +21,7 @@ items:
   nameWithType: NSUserGroup
   fullName: CRMScript.NetServer.NSUserGroup
   type: Class
-  summary: 
+  summary: "\nThe main user group that this user belongs to.\n"
   example: 
 - uid: CRMScript.NetServer.NSUserGroup.#ctor
   commentId: M:CRMScript.NetServer.NSUserGroup.#ctor
@@ -33,7 +33,7 @@ items:
   nameWithType: NSUserGroup.#ctor
   fullName: CRMScript.NetServer.NSUserGroup.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSUserGroup class.\n"
   remarks: 
   syntax: 
     content: NSUserGroup
@@ -68,7 +68,7 @@ items:
   nameWithType: NSUserGroup.GetId()
   fullName: CRMScript.NetServer.NSUserGroup.GetId()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetId()
@@ -88,7 +88,7 @@ items:
   nameWithType: NSUserGroup.GetRank()
   fullName: CRMScript.NetServer.NSUserGroup.GetRank()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Integer GetRank()
@@ -108,7 +108,7 @@ items:
   nameWithType: NSUserGroup.GetTooltip()
   fullName: CRMScript.NetServer.NSUserGroup.GetTooltip()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetTooltip()
@@ -128,7 +128,7 @@ items:
   nameWithType: NSUserGroup.GetValue()
   fullName: CRMScript.NetServer.NSUserGroup.GetValue()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String GetValue()
@@ -170,7 +170,7 @@ items:
   nameWithType: NSUserGroup.SetId(Integer)
   fullName: CRMScript.NetServer.NSUserGroup.SetId(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetId(Integer id)
@@ -192,7 +192,7 @@ items:
   nameWithType: NSUserGroup.SetRank(Integer)
   fullName: CRMScript.NetServer.NSUserGroup.SetRank(Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetRank(Integer rank)
@@ -214,7 +214,7 @@ items:
   nameWithType: NSUserGroup.SetTooltip(String)
   fullName: CRMScript.NetServer.NSUserGroup.SetTooltip(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetTooltip(String tooltip)
@@ -236,7 +236,7 @@ items:
   nameWithType: NSUserGroup.SetValue(String)
   fullName: CRMScript.NetServer.NSUserGroup.SetValue(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetValue(String value)
